--- a/_posts/2024-10-23-3.md
+++ b/_posts/2024-10-23-3.md
@@ -12,7 +12,7 @@ tags:
   - 二维数点
 ---
 
-## 什么是二维数点
+# 什么是二维数点
 
 顾名思义，在一个二维平面内求一个矩形内有多少个点（“点”并非指普通几何点，否则有无数个），如图。
 
@@ -29,7 +29,7 @@ tags:
 
 然而计算机不能如此一眼看出，那么找到矩形内点的数量的过程就是**二维数点**。
 
-## 扫描线算法
+# 扫描线算法
 
 思想如图（来源于[OI Wiki](https://oi-wiki.org/geometry/scanning/#%E4%BA%8C%E7%BB%B4%E7%9F%A9%E5%BD%A2%E9%9D%A2%E7%A7%AF%E5%B9%B6%E9%97%AE%E9%A2%98)）：
 
@@ -39,21 +39,81 @@ tags:
 
 扫描线的底层逻辑就是模拟一条线扫描过去，最后给出答案。
 
-### 问题形式
+# 二维数点（例题：[洛谷P10814](https://www.luogu.com.cn/problem/P10814)）
+
+## 问题形式
 
 很有可能不是形如“给定二维平面，求某一矩形内符合要求的点的数量”，也有可能是“给一个长为 $n$ 的序列，有 $m$ 次查询，每次查区间 $[l,r]$ 中值在 $[x,y]$ 内的元素个数。”
 
-### 过程
+## 维度压缩
 
-以“求 $[l,r]$ 区间中小于等于 $x$ 的元素个数”为例。
+其实就是将原来的**静态**二维问题压缩为**动态**一维后使用数据结构维护。
 
-从左往右扫描，扫到了点便加入。
+## 两种方案
 
-开一个**权值树状数组**，记录 $x$ 出现的次数。
+$$
+\LARGE\color{yellow}\colorbox{red}{warning:扫描线扫过的是值域}
+$$
 
-给 $[l,r]$ 进行左右差分即可。
+### 值域（离散化）
 
-## （例题P10814）AC代码
+#### 操作
+
+首先，当值域过大时，是肯定**需要离散化**的，而且是**离线的离散化**，即离散化所有**询问**。
+
+> 先将所有的询问离散化，用树状数组维护权值，对于每次询问的 $l$ 和 $r$，我们在枚举到 $l-1$ 时统计当前位于区间 $[x,y]$ 内的数的数量 $a$，继续后枚举，枚举到 $r$ 时统计当前位于区间 $[x,y]$ 内的数的数量 $b$，$b-a$ 即为该次询问的答案。——[Oi Wiki](https://oi-wiki.org/geometry/scanning/#%E4%BA%8C%E7%BB%B4%E6%95%B0%E7%82%B9)
+
+但是对于例题的数据范围（$10^6$），可以不离散化。
+
+具体过程如下。
+
+创建一个结构体记录问题：
+
+```cpp
+struct problem{
+	int x,id,value;
+};
+```
+
+$x$ 含义如题，$id$ 表示这是第几个问题，$value=\pm1$（解释见下文）。
+
+每次读入 $l,r,x$ 后，进行如下操作：
+
+```cpp
+q[l-1].push_back({x,i,-1});
+q[r].push_back({x,i,1});
+```
+
+统计答案：
+
+```cpp
+for(int i=1;i<=n;i++){
+    add(a[i],1);
+    for(int j=0;j<q[i].size();j++){
+        ans[q[i][j].id]+=q[i][j].value*query(q[i][j].x);
+    }
+}
+```
+
+#### 解释
+
+如图。（为便于观察，错开了蓝色、绿色矩形，不然边框应该有重合部分）
+
+![](C:\Users\Administrator\AppData\Roaming\Typora\typora-user-images\image-20241024203832725.png)
+
+$\color{#FF7F27} \colorbox{#FF7F27}{1}$ 橙色部分，也就是需要求的部分的答案显然等于 $\color{#22B14C}\colorbox{#22B14C}{1}$ 绿色部分减去 $\color{#00A2E8}\colorbox{#00A2E8}{1}$ 蓝色部分的答案。
+
+那么我们令绿色、蓝色矩形的左边界为 $0$。（依题目而定，就是一个所有询问都询问不到、没有点的值）
+
+那么抽象化一些，也就是使用 $[0,r]$ 的 合法点数减去 $[0,l-1]$ 的合法点数。
+
+为了便于处理，我们便记录一个 $value=\pm1$ 来记录是应该进行加法还是减法。
+
+更加具体的，也就是扫描线扫到 $l-1$ 时，先减去此时合法点数，扫描到 $r$ 时，便会抵消先前多减去的，剩下的便是答案。
+
+时间复杂度：$\mathcal O\big((n+m)\log_2m\big)$。
+
+#### AC代码
 
 ```cpp
 //#include<bits/stdc++.h>
@@ -77,7 +137,6 @@ struct problem{
 };
 vector<problem>q[M+1];
 int n,m,a[N+1],t[N+1],ans[N+1];
-//树状数组 
 int lowbit(int x){
 	return x&-x;
 }
@@ -108,6 +167,7 @@ int main(){
 	}for(int i=1;i<=n;i++){
 		add(a[i],1);
 		for(int j=0;j<q[i].size();j++){
+            //使用.id找到对应问题，记录答案
 			ans[q[i][j].id]+=q[i][j].value*query(q[i][j].x);
 		}
 	}for(int i=1;i<=m;i++)printf("%d\n",ans[i]);
@@ -118,3 +178,21 @@ int main(){
 }
 ```
 
+### 排序+记录值
+
+你可能会看到这种写法：
+
+```cpp
+//...
+q[++cnt] = {l-1, i, x, -1};
+q[++cnt] = {r, i, x, 1};
+//...
+sort(q + 1, q + 1 + cnt);
+for (int i = 1, j = 1; i <= cnt; ++i) {
+    for (; j <= q[i].k; ++j) bit.add(a[j]);
+    ans[q[i].id] += q[i].val * bit.query(q[i].x);
+}
+//...
+```
+
+和上一种方案无思想上的差别，区别在于空间复杂度不同。但是如果加入离散化，则没有什么太大差异。
