--- a/_posts/2024-10-23-3.md
+++ b/_posts/2024-10-23-3.md
@@ -180,7 +180,7 @@ int main(){
 
 ### 排序+记录值
 
-你可能会看到这种写法：
+你可能会看到这种写法（摘自[此处](https://www.luogu.com.cn/article/38uukndz)）：
 
 ```cpp
 //...
@@ -196,3 +196,4 @@ for (int i = 1, j = 1; i <= cnt; ++i) {
 ```
 
 和上一种方案无思想上的差别，区别在于空间复杂度不同。但是如果加入离散化，则没有什么太大差异。
+
