--- a/_posts/2024-10-20-2.md
+++ b/_posts/2024-10-20-2.md
@@ -312,7 +312,7 @@ int lca(int u,int v){
 8 3
 ```
 
-那么建出来的“邻接表”便长这样：（事实上，这样做仅仅是为了能够快速找到有关节点，而又不浪费空间）
+那么建出来的“邻接表”便长这样：（事实上，这样做仅仅是为了能够快速找到有关节点，而又不浪费空间，**与邻接表本身在图上的思想无关，请避免误会**）
 
 ![](https://cfyy.us.kg/img/2024/10/019.png)
 
@@ -339,16 +339,78 @@ int lca(int u,int v){
 
 随后使用类“邻接表”存储询问 $u_i,v_i$。
 
-然后DFS第一遍，预处理出以下信息：
+再调用 `tarjan()`：
 
-* $father_x$：$x$ **在图中的**父节点；
-* 
+```cpp
+void tarjan(int x){
+    //三种状态：0-没有访问到,1-访问到了没有回溯,2-已经回溯
+	static int vis[N+1];
+	vis[x]=1;
+	for(int i=h[x];i>0;i=a[i].r){
+		if(vis[a[i].v])continue;//其实就是访问到了父节点,跳过
+		tarjan(a[i].v);
+		f[a[i].v]=x;//并查集合并
+	}for(int i=hq[x];i>0;i=q[i].r){
+		if(q[i].v)ans[q[i].id]=find(q[i].v);//通过id找到对应问题记录答案
+	}vis[x]=2;
+}
+```
 
+最后一个简单的输出：
 
+```cpp
+for(int i=1;i<=m;i++)printf("%d\n",ans[i]);
+```
 
 ## 各种LCA算法的比较
 
+### 倍增算法
 
+**预处理**时间复杂度：$\mathcal O(n\log_2n)$。
+
+**查询**时间复杂度：$\mathcal O(\log_2n)$。
+
+空间复杂度：$\mathcal O(n\log_2n)$。
+
+### 欧拉序+ST表
+
+**预处理**时间复杂度：$\mathcal O(2n\log_22n)$。
+
+**查询**时间复杂度：$\mathcal O(1)$。
+
+空间复杂度：$\mathcal O(2n\log_22n)$。
+
+注：使用 $2n$ 是为了与”DFS序+ST表“形成对比。
+
+### DFS序+ST表
+
+**预处理**时间复杂度：$\mathcal O(n\log_2n)$。
+
+**查询**时间复杂度：$\mathcal O(1)$。
+
+空间复杂度：$\mathcal O(n\log_2n)$。
+
+### Tarjan 离线算法
+
+**预处理**时间复杂度：$\mathcal O(n)$。
+
+**求解**时间复杂度：$\mathcal O(m\alpha(m+n,n)+n)$。
+
+空间复杂度：$\mathcal O(n+m)$。
+
+> 并不存在「朴素 Tarjan LCA 算法中使用的并查集性质比较特殊，单次调用 `find()` 函数的时间复杂度为均摊 $\mathcal O(1)$」这种说法。
+>
+> 以下的朴素 Tarjan 实现复杂度为 $\mathcal O(m\alpha(m+n,n)+n)$。如果需要追求严格线性，可以参考 [Gabow 和 Tarjan 于 1983 年的论文](https://cfyy.us.kg/file/2024/10/Tarjan.pdf)。其中给出了一种复杂度为 $\mathcal O(n+m)$ 的做法。——[OI Wiki](https://oi-wiki.org/graph/lca/#%E6%80%A7%E8%B4%A8_3)
+
+### 汇总
+
+倍增相对而言更加好理解，更加适合初学者，但**复杂度较劣**。
+
+DFS序+ST表的复杂度较优，代码也并不难理解，**适合使用**。
+
+欧拉序+ST表不如DFS序+ST表。
+
+Tarjan 离线算法虽然**复杂度最优**，但常数较大，且可能并不是那么的好理解。
 
 ## 练习题（参考代码）
 
@@ -600,7 +662,79 @@ int main(){
 
 #### Tarjan 离线算法（DFS+并查集）
 
-
+```cpp
+//#include<bits/stdc++.h>
+#include<algorithm> 
+#include<iostream>
+#include<cstring>
+#include<iomanip>
+#include<cstdio>
+#include<string>
+#include<vector>
+#include<cmath>
+#include<ctime>
+#include<deque>
+#include<queue>
+#include<stack>
+#include<list>
+using namespace std;
+const int N=5e5,M=5e5;
+//邻接表
+struct edge{
+	int v,r;
+}a[2*N+1];
+struct problem{
+	int v,r,id;
+}q[2*M+1];
+int n,m,s,h[N+1],hq[N+1],f[N],ans[N];
+void create(int u, int v) {
+	static int top;
+	a[++top]={v,h[u]};
+	h[u]=top;
+}
+void create2(int u,int v,int id){
+	static int top;
+	q[++top]={v,hq[u],id};
+	hq[u]=top;
+}
+int find(int x){//路径压缩
+	if(f[x]!=x)return f[x]=find(f[x]);
+	return x;
+}
+void tarjan(int x){
+	static int vis[N+1];
+	vis[x]=1;
+	for(int i=h[x];i>0;i=a[i].r){
+		if(vis[a[i].v])continue;
+		tarjan(a[i].v);
+		f[a[i].v]=x;//加入并查集
+	}for(int i=hq[x];i>0;i=q[i].r){
+		if(vis[q[i].v]==2)ans[q[i].id]=find(q[i].v);//记录答案
+	}vis[x]=2;//已经回溯过
+}
+int main(){
+	/*freopen("test.in","r",stdin);
+	freopen("test.out","w",stdout);*/
+	
+	scanf("%d %d %d",&n,&m,&s);
+	for(int i=1;i<=n;i++)f[i]=i;
+	for(int i=1;i<n;i++){
+		int u,v;
+		scanf("%d %d",&u,&v);
+		create(u,v);create(v,u);
+	}for(int i=1;i<=m;i++){
+		int x,y;
+		scanf("%d %d",&x,&y);
+		if(x==y)ans[i]=x;
+		else create2(x,y,i),create2(y,x,i);
+	}tarjan(s);
+	for(int i=1;i<=m;i++)printf("%d\n",ans[i]);
+	
+	/*fclose(stdin); 
+	fclose(stdout);*/
+	return 0;
+}
+```
 
 ### [[NOIP2013 提高组] 货车运输](https://www.luogu.com.cn/problem/P1967)
 
