--- a/_posts/2024-10-25-1.md
+++ b/_posts/2024-10-25-1.md
@@ -36,7 +36,7 @@ tags:
 * 字符串哈希，$\mathcal O(n\log_2n)$。
 * 后缀数组+快速LCA，$\mathcal O(n)$。（使用[加减 1RMQ](https://oi-wiki.org/topic/rmq/#%E5%8A%A0%E5%87%8F-1rmq)求解[欧拉序+ST表](https://cfyy.us.kg/2024/10/20/2/#%E6%AC%A7%E6%8B%89%E5%BA%8Fst%E8%A1%A8)的LCA，可以做到 $\mathcal O(n)$ 预处理，$\mathcal O(1)$ 查询）
 
-然而，这些算法都不是那么的简单，相比起来这些，***Manacher算法***是 **压倒性** 的简单。
+然而，这些算法都不是那么的简单，相比起来这些，***Manacher算法*** 是 **压倒性** 的简单。
 
 > 但是这里描述的算法 **压倒性** 的简单，并且在时间和空间复杂度上具有更小的常数。该算法由 **Glenn K. Manacher** 在 1975 年提出。——[OI Wiki](https://oi-wiki.org/string/manacher/#%E8%A7%A3%E6%B3%95)
 
@@ -126,6 +126,14 @@ $$
 
 故，总时间复杂度为 $\mathcal O(n)$。
 
+## 边界条件
+
+我们可以令 $a_0$ 为 `~`（不同于插入的 `#` 和其他有效字符）。
+
+这样是为了防止越界。
+
+注意到，只有 `while(a[i-p[i]]==a[i+p[i]])p[i]++;` 可能会产生月结，那么我们令 $a_0$ 为一个不同于 $a_{2i}$ 的值即可。
+
 ## 例题AC代码
 
 ```cpp
@@ -171,4 +179,3 @@ int main(){
 	return 0;
 }
 ```
-
