--- a/_posts/2024-10-25-1.md
+++ b/_posts/2024-10-25-1.md
@@ -132,7 +132,7 @@ $$
 
 这样是为了防止越界。
 
-注意到，只有 `while(a[i-p[i]]==a[i+p[i]])p[i]++;` 可能会产生月结，那么我们令 $a_0$ 为一个不同于 $a_{2i}$ 的值即可。
+注意到，只有 `while(a[i-p[i]]==a[i+p[i]])p[i]++;` 可能会产生越界，那么我们令 $a_0$ 为一个不同于 $a_{2i}$ 的值即可。
 
 ## 例题AC代码
 
