--- a/_posts/2024-10-23-2.md
+++ b/_posts/2024-10-23-2.md
@@ -102,7 +102,7 @@ tags:
 
 首先，假设我们已经找出了所有的合法数对 $(i,j)$。
 
-那么明显对于答案，二维数点即可，时间复杂度 $\large \mathcal O(n+T)\log_2V$，其中 $n$ 是点的个数，$V$ 是值域。
+那么明显对于答案，二维数点即可，时间复杂度 $\large \mathcal O\big((n+T)\log_2V\big)$，其中 $n$ 是点的个数，$V$ 是值域。
 
 一个十分显然的结论是，这题我们需要离线算法，那么我们考虑计算合法数对，但是，数据范围 $1\sim10^6$，如果直接枚举 $i,j$ 肯定 $\text{TLE}$，我们考虑更高效的方式。
 
