--- a/_posts/2024-10-25-1.md
+++ b/_posts/2024-10-25-1.md
@@ -68,7 +68,7 @@ tags:
 
 令插入后的字符串 $s$ 长度为 $m=2n+1$。
 
-令 $r$ 为当前**已确定的、最远的**回文串右边界。即：$r=\max_{i=1}^mi+p_i-1$。
+令 $r$ 为当前**已确定的、最远的**回文串右边界。即：$r=\max \limits_{i=1}^m(i+p_i-1)$。
 
 令 $mid$ 为当前**已确定的、最远的**回文串回文中心。即：$mid=\Big\lfloor\dfrac{r+1}{2}\Big\rfloor$
 
@@ -116,7 +116,7 @@ $$
 
   整个回文字符串长度为：$2\times\frac{ans}2=ans$。考虑到回文中心计算了两次，则最终答案为 $ans-1$。
 
-故答案为 $(\max_{i=1}^mp_i)-1$。
+故答案为 $(\max\limits_{i=1}^mp_i)-1$。
 
 ## 时间复杂度分析
 
