--- a/_posts/2024-10-25-2.md
+++ b/_posts/2024-10-25-2.md
@@ -48,13 +48,112 @@ $$
 $$
 \left\{
 \begin{aligned}
-&\large \sum_{i=1}^m(x_i+y_i-k)\leq x+y\\
-&\large \sum_{i=1}^m(x_i-y_i-k)\leq x-y\\
-&\large \sum_{i=1}^m(-x_i+y_i-k)\leq -x+y\\
-&\large \sum_{i=1}^m(-x_i-y_i-k)\leq -x-y\\
+&\large \sum_{i=1}^m(x_i+y_i-k)\geq x+y\\
+&\large \sum_{i=1}^m(x_i-y_i-k)\geq x-y\\
+&\large \sum_{i=1}^m(-x_i+y_i-k)\geq -x+y\\
+&\large \sum_{i=1}^m(-x_i-y_i-k)\geq -x-y\\
 \end{aligned}
 \right.
 $$
 
-因此
+因此，只有当 $m$ 满足上述条件时，$m$ 才成立。
+
+现在，针对第一种展开分析。（剩下三种分析见后文）
+
+设 $\large f_i=\sum\limits_{j=1}^i(x_j+y_j-k)$，则有 $\large f_m\leq x+y$。
+
+设 $m=q_in+i$，其中 $i=m\bmod n$（或 $i=n$）。
+
+考虑到 $x_j,y_j$ 均以 $n$ 为周期循环，有 $\large f_m=f_{qn}+f_i=q\times f_n+f_i$。
+
+则：$\large q\times f_n+f_i\geq x+y$。
+
+不等式，明显分类讨论。
+
+1. $\large f_n>0$ 时，解得 $\large q_i\geq \Bigg\lceil\dfrac{x+y-f_i}{f_n}\Bigg\rceil$。
+2. $\large f_n<0$ 时，解得 $\large q_i\leq \Bigg\lfloor\dfrac{x+y-f_i}{f_n}\Bigg\rceil$。
+3. $f_n=0$ 时，需要继续分类。
+   1. 若 $\large f_i<x+y$，则此时无解，与条件**相悖**。
+   2. 否则，有解，解为 $q_i=0$。
+
+我们使用 $\large [l_i,r_i]$ 来描述 $\large q_i$ 的上下界，每次更新 $l_i,r_i$ 即可，最终答案即为 $\large \min\limits_{i=1}^{n}(l_i\times n+1)$。
+
+但需要注意的是，$i\in[1,n]$，而不是 $[1,n)$。因为我们需要考虑 $m\bmod n=0$ 的情况，那么不妨令 $q_n=\dfrac{m}{n}-1,i=n$，便于处理。
+
+***
+
+那么至此，我们就求出了满足第一个不等式 $\large \sum\limits_{i=1}^m(x_i+y_i-k)\geq x+y$ 的 所有区间 $[l_i，r_i]$。
+
+同理再进行三次操作，求出最终所有**公共的** $[l_i,r_i]$ ，答案即 $\large \min\limits_{i=1}^{n}(l_i\times n+1)$。
+
+## AC代码
+
+```cpp
+//#include<bits/stdc++.h>
+#include<algorithm> 
+#include<iostream>
+#include<cstring>
+#include<iomanip>
+#include<cstdio>
+#include<string>
+#include<vector>
+#include<cmath>
+#include<ctime>
+#include<deque>
+#include<queue>
+#include<stack>
+#include<list>
+using namespace std;
+typedef long long ll;
+const ll MAX=(1ll<<60);
+const int N=1e5;
+int n,k,x,y,X[N+1],Y[N+1];
+ll l[N+1],r[N+1];
+inline void solve(int opx,int opy){
+	static ll f[N+1];
+	ll t=opx*x+opy*y; 
+	for(int i=1;i<=n;i++)f[i]=f[i-1]+opx*X[i]+opy*Y[i]+k;
+	if(f[n]==0){
+		for(int i=1;i<=n;i++){
+			if(f[i]<t)r[i]=-MAX;
+		}
+	}else if(f[n]>0){
+		for(int i=1;i<=n;i++){
+			if(t>f[i])l[i]=max(l[i],(t-f[i])/f[n] + ( (t-f[i])%f[n]>0 ) );
+		}
+	}else{
+		for(int i=1;i<=n;i++){
+			if(f[i]<t)r[i]=-MAX;
+			else r[i]=min(r[i],(t-f[i])/f[n]);
+		}
+	}
+}
+inline void work(){
+	scanf("%d %d %d %d",&n,&k,&x,&y);
+	for(int i=1;i<=n;i++){
+		scanf("%d %d",X+i,Y+i);
+		l[i]=0;r[i]=MAX;
+	}
+	if(x==0&&y==0){
+		printf("0\n");
+		return;
+	}solve(1,1);solve(1,-1);solve(-1,1);solve(-1,-1);
+	ll ans=MAX;
+	for(int i=1;i<=n;i++){
+		if(l[i]<=r[i])ans=min(ans,l[i]*n+i);
+	}printf("%lld\n",(ans<MAX?ans:-1));
+}
+int main(){
+	/*freopen("test.in","r",stdin);
+	freopen("test.out","w",stdout);*/
+	
+	int T;
+	scanf("%d",&T);
+	while(T--)work();
+	
+	/*fclose(stdin); 
+	fclose(stdout);*/
+	return 0;
+}
+```
 
