fix | to \vert for krmarkdown

--- a/_posts/2024-10-25-2.md
+++ b/_posts/2024-10-25-2.md
@@ -26,11 +26,11 @@ tags:
 
 考虑到 $\large \sum\limits_{i=1}^m(x'_i+x_i)=x$，那么 $\large \sum\limits_{i=1}^mx'_i=x-\sum\limits_{i=1}^mx_i$。同理，$\large \sum\limits_{i=1}^my'_i=y-\sum\limits_{i=1}^my_i$。
 
-因为 $|x'_i|+|y'_i|\leq k$，则 $\large\Bigg|\sum\limits_{i=1}^mx'_i\Bigg|+\Bigg|\sum\limits_{i=1}^my'_i\Bigg|\leq mk$。
+因为 $\vert x'_i\vert+\vert y'_i\vert \leq k$，则 $\large\Bigg\vert \sum\limits_{i=1}^mx'_i\Bigg\vert +\Bigg\vert\sum\limits_{i=1}^my'_i\Bigg\vert \leq mk$。
 
-结合两式，有：$\large\Bigg|x-\sum\limits_{i=1}^mx_i\Bigg|+\Bigg|y-\sum\limits_{i=1}^my_i\Bigg|\leq mk$。
+结合两式，有：$\large\Bigg\vert x-\sum\limits_{i=1}^mx_i\Bigg\vert +\Bigg\vert y-\sum\limits_{i=1}^my_i\Bigg\vert \leq mk$。
 
-一个很明显的结论就是 $|p|\leq p$ 恒成立，那么 $m$ 需要同时满足以下条件：
+一个很明显的结论就是 $\vert p\vert \leq p$ 恒成立，那么 $m$ 需要同时满足以下条件：
 
 $$
 \left\{
@@ -71,7 +71,7 @@ $$
 不等式，明显分类讨论。
 
 1. $\large f_n>0$ 时，解得 $\large q_i\geq \Bigg\lceil\dfrac{x+y-f_i}{f_n}\Bigg\rceil$。
-2. $\large f_n<0$ 时，解得 $\large q_i\leq \Bigg\lfloor\dfrac{x+y-f_i}{f_n}\Bigg\rceil$。
+2. $\large f_n<0$ 时，解得 $\large q_i\leq \Bigg\lfloor\dfrac{x+y-f_i}{f_n}\Bigg\rfloor$。
 3. $f_n=0$ 时，需要继续分类。
    1. 若 $\large f_i<x+y$，则此时无解，与条件**相悖**。
    2. 否则，有解，解为 $q_i=0$。
