try to fix the katex

--- a/_posts/2024-10-25-2.md
+++ b/_posts/2024-10-25-2.md
@@ -24,14 +24,27 @@ tags:
 
 ***
 
-考虑到 $\large \sum\limits_{i=1}^m(x'_i+x_i)=x$，那么 $\large \sum\limits_{i=1}^mx'_i=x-\sum\limits_{i=1}^mx_i$。同理，$\large \sum\limits_{i=1}^my'_i=y-\sum\limits_{i=1}^my_i$。
+考虑到：
 
-因为 $\vert x'_i\vert+\vert y'_i\vert \leq k$，则 $\large\Bigg\vert \sum\limits_{i=1}^mx'_i\Bigg\vert +\Bigg\vert\sum\limits_{i=1}^my'_i\Bigg\vert \leq mk$。
+$$
+\large \sum\limits_{i=1}^m(x'_i+x_i)=x
+$$
+那么：
+$$
+\large \sum\limits_{i=1}^mx'_i=x-\sum\limits_{i=1}^mx_i
+$$
+
+同理，有：
+
+$$
+\large \sum\limits_{i=1}^my'_i=y-\sum\limits_{i=1}^my_i
+$$
+
+因为 $\vert x'_i\vert+\vert y'_i\vert \leq k$ ，则 $\large\Bigg\vert \sum\limits_{i=1}^mx'_i\Bigg\vert +\Bigg\vert\sum\limits_{i=1}^my'_i\Bigg\vert \leq mk$ 。
 
 结合两式，有：$\large\Bigg\vert x-\sum\limits_{i=1}^mx_i\Bigg\vert +\Bigg\vert y-\sum\limits_{i=1}^my_i\Bigg\vert \leq mk$。
 
 一个很明显的结论就是 $\vert p\vert \leq p$ 恒成立，那么 $m$ 需要同时满足以下条件：
-
 $$
 \left\{
 \begin{array}{}
@@ -42,9 +55,7 @@ $$
 \end{array}
 \right.
 $$
-
 等价于需要满足：
-
 $$
 \left\{
 \begin{aligned}
