fixed the wrong KaTeX

--- a/_posts/2024-10-20-1.md
+++ b/_posts/2024-10-20-1.md
@@ -22,3 +22,11 @@ tags:
 从实用来讲，$\KaTeX$ 足以支持 $\LaTeX$ 语法，也不需要MathJax。
 
 总而言之，MathJax直接替换为 $\KaTeX$ 就行了。
+
+***
+
+2024.10.26更新：$\KaTeX$ 行内公式渲染问题已解决，可直接使用多行公式渲染。
+
+附：之前的错误渲染截图。
+
+![](https://cfyy.us.kg/img/2024/10/025.png)
