--- a/_posts/2024-10-25-2.md
+++ b/_posts/2024-10-25-2.md
@@ -30,7 +30,7 @@ tags:
 
 因为 $$\vert x'_i\vert+\vert y'_i\vert \leq k$$，则 $$\large\Bigg\vert \sum\limits_{i=1}^mx'_i\Bigg\vert +\Bigg\vert\sum\limits_{i=1}^my'_i\Bigg\vert \leq mk$$。
 
-结合两式，有：$\large\Bigg\vert x-\sum\limits_{i=1}^mx_i\Bigg\vert +\Bigg\vert y-\sum\limits_{i=1}^my_i\Bigg\vert \leq mk$。
+结合两式，有：$$\large\Bigg\vert x-\sum\limits_{i=1}^mx_i\Bigg\vert +\Bigg\vert y-\sum\limits_{i=1}^my_i\Bigg\vert \leq mk$$。
 
 一个很明显的结论就是 $\vert p\vert \leq p$ 恒成立，那么 $m$ 需要同时满足以下条件：
 
@@ -158,4 +158,3 @@ int main(){
 	return 0;
 }
 ```
-
