--- a/_posts/2011-1-1-0.md
+++ b/_posts/2011-1-1-0.md
@@ -2,15 +2,17 @@
 layout: post
 title: "《殇》序言"
 subtitle: ""
-date: 2024-10-26
+date: 2011-1-1
 author: "TH911"
-header-img: "img/bg/7.jpeg"
+header-img: "img/bg/7.jpg"
 header-mask: 0.4
 tags:
   - 《殇》
 ---
 
-## 关于本系列文章
+## **关于本系列文章**
+
+均以 $2011/1/1$ 为日期上传。
 
 转载自他处。
 
