--- a/_posts/2011-8-19-1.md
+++ b/_posts/2011-8-19-1.md
@@ -1,14 +1,14 @@
 ---
 layout: post
-title: "《殇》我的价值观"
+title: "《殇》我的思想"
 subtitle: ""
 date: 2011-1-1
 author: "TH911"
 header-img: "img/bg/7.jpg"
 header-mask: 0.4
 tags:
-  - 《殇》
 ---
 
 >  **$$\color{red}\text{请先阅读序言部分：}$$**[link](https://cfyy.us.kg/2011/01/01/0/)
 
+* 没有人会心疼你，除了你自己。
