--- a/_posts/2011-8-19-1.md
+++ b/_posts/2011-8-19-1.md
@@ -12,3 +12,5 @@ tags:
 >  **$$\color{red}\text{请先阅读序言部分：}$$**[link](https://cfyy.us.kg/2011/01/01/0/)
 
 * 没有人会心疼你，除了你自己。
+
+<audio src="https://cfyy.us.kg/music/83..闻人听書_ - 落魄时惊鸿.flac"></audio>
