--- a/_posts/2024-10-27-1.md
+++ b/_posts/2024-10-27-1.md
@@ -38,7 +38,7 @@ Markdown/html插入源码：
 
 ### 8.闻人听書_ - 一笑江湖
 
-<audio src="https://cfyy.us.kg/music/8.闻人听書_ - 一笑江湖.flac"></audio>
+<audio src="https://cfyy.us.kg/music/8.闻人听書_ - 一笑江湖.flac" controls></audio>
 
 ### 20.北京天使合唱团 - 童年
 
