--- a/_posts/2024-10-27-1.md
+++ b/_posts/2024-10-27-1.md
@@ -40,7 +40,7 @@ Markdown/html插入源码：
 
 <audio src="https://cfyy.us.kg/music/8.闻人听書_ - 一笑江湖.flac"></audio>
 
-<audio id="audio" controls="" preload="none"> <source id="flac" src="https://cfyy.us.kg/music/8.闻人听書_ - 一笑江湖.flac"> </audio>
+<audio><source src="https://cfyy.us.kg/music/8.闻人听書_ - 一笑江湖.flac"></audio>
 
 ### 20.北京天使合唱团 - 童年
 
