--- a/_posts/2024-10-27-1.md
+++ b/_posts/2024-10-27-1.md
@@ -14,14 +14,14 @@ tags:
 
 本来是自用的，但你想下载当然也行。
 
-限制100MB，部分压缩后会上传。
+限制 $100MB$，部分压缩后会上传。
 
 ***
 
 Markdown/html插入源码：
 
 ```html
-<audio src="{链接}"></audio>
+<audio><source src="{链接}"></source></audio>
 ```
 
 ### 链接获取：
@@ -38,242 +38,240 @@ Markdown/html插入源码：
 
 ### 8.闻人听書_ - 一笑江湖
 
-<audio src="https://cfyy.us.kg/music/8.闻人听書_ - 一笑江湖.flac"></audio>
-
-<audio><source src="https://cfyy.us.kg/music/8.闻人听書_ - 一笑江湖.flac"></audio>
+<audio><source src="https://cfyy.us.kg/music/8.闻人听書_ - 一笑江湖.flac"></source></audio>
 
 ### 20.北京天使合唱团 - 童年
 
-<audio src="https://cfyy.us.kg/music/20.北京天使合唱团 - 童年.flac"></audio>
+<audio><source src="https://cfyy.us.kg/music/20.北京天使合唱团 - 童年.flac"></source></audio>
 
 ### 25.周逸伦 - 青史流芳
 
-<audio src="https://cfyy.us.kg/music/25.周逸伦 - 青史流芳.flac"></audio>
+<audio src="https://cfyy.us.kg/music/25.周逸伦 - 青史流芳.flac"></source></audio>
 
 ### 28.Toby Fox - sans.
 
-<audio src="https://cfyy.us.kg/music/28.Toby Fox - sans..flac"></audio>
+<audio src="https://cfyy.us.kg/music/28.Toby Fox - sans..flac"></source></audio>
 
 ### 32.Max Elto - Shadow Of The Sun
 
-<audio src="https://cfyy.us.kg/music/32.Max Elto - Shadow Of The Sun.flac"></audio>
+<audio src="https://cfyy.us.kg/music/32.Max Elto - Shadow Of The Sun.flac"></source></audio>
 
 ### 36.闻人听書_ - 虞兮叹
 
-<audio src="https://cfyy.us.kg/music/36.闻人听書_ - 虞兮叹.flac"></audio>
+<audio src="https://cfyy.us.kg/music/36.闻人听書_ - 虞兮叹.flac"></source></audio>
 
 ### 37.一只白羊 - 赐我(DJ 版)
 
-<audio src="https://cfyy.us.kg/music/37.一只白羊 - 赐我(DJ 版).flac"></audio>
+<audio src="https://cfyy.us.kg/music/37.一只白羊 - 赐我(DJ 版).flac"></source></audio>
 
 ### 40.气质隆Sir - 十宗罪 (治愈系)
 
-<audio src="https://cfyy.us.kg/music/40.气质隆Sir - 十宗罪 (治愈系).flac"></audio>
+<audio src="https://cfyy.us.kg/music/40.气质隆Sir - 十宗罪 (治愈系).flac"></source></audio>
 
 ### 44..就是南方凯 - 樱花树下的约定
 
-<audio src="https://cfyy.us.kg/music/44..就是南方凯 - 樱花树下的约定.flac"></audio>
+<audio src="https://cfyy.us.kg/music/44..就是南方凯 - 樱花树下的约定.flac"></source></audio>
 
 ### 45.小炎同学 - 我不是救世主
 
-<audio src="https://cfyy.us.kg/music/45.小炎同学 - 我不是救世主.flac"></audio>
+<audio src="https://cfyy.us.kg/music/45.小炎同学 - 我不是救世主.flac"></source></audio>
 
 ### 47.邓寓君(等什么君) - 辞九门回忆
 
-<audio src="https://cfyy.us.kg/music/47.邓寓君(等什么君) - 辞九门回忆.flac"></audio>
+<audio src="https://cfyy.us.kg/music/47.邓寓君(等什么君) - 辞九门回忆.flac"></source></audio>
 
 ### 51.就是南方凯 - 离别思故乡
 
-<audio src="https://cfyy.us.kg/music/51.就是南方凯 - 离别思故乡.flac"></audio>
+<audio src="https://cfyy.us.kg/music/51.就是南方凯 - 离别思故乡.flac"></source></audio>
 
 ### 52..刀酱 - 5:20AM（我在5:20睡觉13:14准时起）
 
-<audio src="https://cfyy.us.kg/music/52..刀酱 - 5：20AM（我在5：20睡觉13：14准时起）.flac"></audio>
+<audio src="https://cfyy.us.kg/music/52..刀酱 - 5：20AM（我在5：20睡觉13：14准时起）.flac"></source></audio>
 
 ### 53..soldier-5:20AM
 
-<audio src="https://cfyy.us.kg/music/53..soldier-5：20AM.flac"></audio>
+<audio src="https://cfyy.us.kg/music/53..soldier-5：20AM.flac"></source></audio>
 
 ### 56.邓寓君(等什么君) - 许期赴繁花
 
-<audio src="https://cfyy.us.kg/music/56.邓寓君(等什么君) - 许期赴繁花.flac"></audio>
+<audio src="https://cfyy.us.kg/music/56.邓寓君(等什么君) - 许期赴繁花.flac"></source></audio>
 
 ### 58.善宇 - 班师回朝
 
-<audio src="https://cfyy.us.kg/music/58.善宇 - 班师回朝.flac"></audio>
+<audio src="https://cfyy.us.kg/music/58.善宇 - 班师回朝.flac"></source></audio>
 
 ### 67.丸子呦 - 广寒宫
 
-<audio src="https://cfyy.us.kg/music/67.丸子呦 - 广寒宫.flac"></audio>
+<audio src="https://cfyy.us.kg/music/67.丸子呦 - 广寒宫.flac"></source></audio>
 
 ### 81..姜姜 - 鬓上曾簪花
 
-<audio src="https://cfyy.us.kg/music/81..姜姜 - 鬓上曾簪花.flac"></audio>
+<audio src="https://cfyy.us.kg/music/81..姜姜 - 鬓上曾簪花.flac"></source></audio>
 
 ### 82..蔡琴 _ 余天 _ 苏芮 _ 潘越云 _ 甄妮 _ 李建复 _ 林慧萍 _ 王芷蕾 _ 黄莺莺 _ 洪荣宏 _ 陈淑桦 _ 娃娃 _ 王梦麟 _ 李珮菁 _ 费玉清 _ 齐豫 _ 郑怡 _ 江蕙 _ 杨林 _ 齐秦 - 明天会更好
 
-<audio src="https://cfyy.us.kg/music/82..蔡琴 _ 余天 _ 苏芮 _ 潘越云 _ 甄妮 _ 李建复 _ 林慧萍 _ 王芷蕾 _ 黄莺莺 _ 洪荣宏 _ 陈淑桦 _ 娃娃 _ 王梦麟 _ 李珮菁 _ 费玉清 _ 齐豫 _ 郑怡 _ 江蕙 _ 杨林 _ 齐秦 - 明天会更好.flac"></audio>
+<audio src="https://cfyy.us.kg/music/82..蔡琴 _ 余天 _ 苏芮 _ 潘越云 _ 甄妮 _ 李建复 _ 林慧萍 _ 王芷蕾 _ 黄莺莺 _ 洪荣宏 _ 陈淑桦 _ 娃娃 _ 王梦麟 _ 李珮菁 _ 费玉清 _ 齐豫 _ 郑怡 _ 江蕙 _ 杨林 _ 齐秦 - 明天会更好.flac"></source></audio>
 
 ### 83..闻人听書_ - 落魄时惊鸿
 
-<audio src="https://cfyy.us.kg/music/83..闻人听書_ - 落魄时惊鸿.flac"></audio>
+<audio src="https://cfyy.us.kg/music/83..闻人听書_ - 落魄时惊鸿.flac"></source></audio>
 
 ~~是惊**鸿**！不是惊**魂**！！！~~
 
 ### 84..陈奕迅 - 孤勇者
 
-<audio src="https://cfyy.us.kg/music/84..陈奕迅 - 孤勇者.flac"></audio>
+<audio src="https://cfyy.us.kg/music/84..陈奕迅 - 孤勇者.flac"></source></audio>
 
 ### 85..张杰 - 逆战
 
-<audio src="https://cfyy.us.kg/music/85..张杰 - 逆战.flac"></audio>
+<audio src="https://cfyy.us.kg/music/85..张杰 - 逆战.flac"></source></audio>
 
 ### 86.姜姜 - 共书人间
 
-<audio src="https://cfyy.us.kg/music/86.姜姜 - 共书人间.flac"></audio>
+<audio src="https://cfyy.us.kg/music/86.姜姜 - 共书人间.flac"></source></audio>
 
 ### 87.七叔（叶泽浩） - 故国叹
 
-<audio src="https://cfyy.us.kg/music/87.七叔（叶泽浩） - 故国叹.flac"></audio>
+<audio src="https://cfyy.us.kg/music/87.七叔（叶泽浩） - 故国叹.flac"></source></audio>
 
 ### 88..姜姜 - 弹指芳华
 
-<audio src="https://cfyy.us.kg/music/88..姜姜 - 弹指芳华.flac"></audio>
+<audio src="https://cfyy.us.kg/music/88..姜姜 - 弹指芳华.flac"></source></audio>
 
 ### 89.张德伊玲 - 万物不相拥
 
-<audio src="https://cfyy.us.kg/music/89.张德伊玲 - 万物不相拥.flac"></audio>
+<audio src="https://cfyy.us.kg/music/89.张德伊玲 - 万物不相拥.flac"></source></audio>
 
 ### 90..闻人听書_ - 洛南·仓颉颂
 
-<audio src="https://cfyy.us.kg/music/90..闻人听書_ - 洛南·仓颉颂.flac"></audio>
+<audio src="https://cfyy.us.kg/music/90..闻人听書_ - 洛南·仓颉颂.flac"></source></audio>
 
 ### 91..张德伊玲 - 回忆航线
 
-<audio src="https://cfyy.us.kg/music/91..张德伊玲 - 回忆航线.flac"></audio>
+<audio src="https://cfyy.us.kg/music/91..张德伊玲 - 回忆航线.flac"></source></audio>
 
 ### 92..张德伊玲 - 你只是路过我身边
 
-<audio src="https://cfyy.us.kg/music/92..张德伊玲 - 你只是路过我身边.flac"></audio>
+<audio src="https://cfyy.us.kg/music/92..张德伊玲 - 你只是路过我身边.flac"></source></audio>
 
 ### 93..陈雪凝 - 白山茶
 
-<audio src="https://cfyy.us.kg/music/93..陈雪凝 - 白山茶.flac"></audio>
+<audio src="https://cfyy.us.kg/music/93..陈雪凝 - 白山茶.flac"></source></audio>
 
 ### 94.RE-D_是二哈ya - 如果我们在余生相遇·双鱼座 (变调版）
 
-<audio src="https://cfyy.us.kg/music/94.RE-D_是二哈ya - 如果我们在余生相遇·双鱼座 (变调版）.flac"></audio>
+<audio src="https://cfyy.us.kg/music/94.RE-D_是二哈ya - 如果我们在余生相遇·双鱼座 (变调版）.flac"></source></audio>
 
 ### 95..黄龄 - 痒
 
-<audio src="https://cfyy.us.kg/music/95..黄龄 - 痒.flac"></audio>
+<audio src="https://cfyy.us.kg/music/95..黄龄 - 痒.flac"></source></audio>
 
 **$\color{red}\text{从来没有什么所谓的禁曲，仅仅在于你从什么角度来解读。}$**
 
 ### 96..L（桃籽） - 此去半生
 
-<audio src="https://cfyy.us.kg/music/96..L（桃籽） - 此去半生.flac"></audio>
+<audio src="https://cfyy.us.kg/music/96..L（桃籽） - 此去半生.flac"></source></audio>
 
 ### 97..许镜清 - 云宫迅音
 
-<audio src="https://cfyy.us.kg/music/97..许镜清 - 云宫迅音.flac"></audio>
+<audio src="https://cfyy.us.kg/music/97..许镜清 - 云宫迅音.flac"></source></audio>
 
 ### 98..奇然 _ 沈谧仁 - 琵琶行
 
-<audio src="https://cfyy.us.kg/music/98..奇然 _ 沈谧仁 - 琵琶行.flac"></audio>
+<audio src="https://cfyy.us.kg/music/98..奇然 _ 沈谧仁 - 琵琶行.flac"></source></audio>
 
 ### 99.张德伊玲 - 我穿过烟火人间
 
-<audio src="https://cfyy.us.kg/music/99.张德伊玲 - 我穿过烟火人间.flac"></audio>
+<audio src="https://cfyy.us.kg/music/99.张德伊玲 - 我穿过烟火人间.flac"></source></audio>
 
 ### 100..就是南方凯 - 风吹吹就停了
 
-<audio src="https://cfyy.us.kg/music/100..就是南方凯 - 风吹吹就停了.flac"></audio>
+<audio src="https://cfyy.us.kg/music/100..就是南方凯 - 风吹吹就停了.flac"></source></audio>
 
 ### 101..张德伊玲 - 你本就是骄阳
 
-<audio src="https://cfyy.us.kg/music/101..张德伊玲 - 你本就是骄阳.flac"></audio>
+<audio src="https://cfyy.us.kg/music/101..张德伊玲 - 你本就是骄阳.flac"></source></audio>
 
 ### 102..就是南方凯 - 我自有我的月亮
 
-<audio src="https://cfyy.us.kg/music/102..就是南方凯 - 我自有我的月亮.flac"></audio>
+<audio src="https://cfyy.us.kg/music/102..就是南方凯 - 我自有我的月亮.flac"></source></audio>
 
 ### 103..就是南方凯 - 偏向 (为何会两败俱伤)
 
-<audio src="https://cfyy.us.kg/music/103..就是南方凯 - 偏向 (为何会两败俱伤).flac"></audio>
+<audio src="https://cfyy.us.kg/music/103..就是南方凯 - 偏向 (为何会两败俱伤).flac"></source></audio>
 
 ### 104..张德伊玲 - 落日烟火
 
-<audio src="https://cfyy.us.kg/music/104..张德伊玲 - 落日烟火.flac"></audio>
+<audio src="https://cfyy.us.kg/music/104..张德伊玲 - 落日烟火.flac"></source></audio>
 
 ### 105..yihuik苡慧 - 银河与星斗
 
-<audio src="https://cfyy.us.kg/music/105..yihuik苡慧 - 银河与星斗.flac"></audio>
+<audio src="https://cfyy.us.kg/music/105..yihuik苡慧 - 银河与星斗.flac"></source></audio>
 
 ### 106..冰幽 _ 解忧草 - 辞·九门回忆
 
-<audio src="https://cfyy.us.kg/music/106..冰幽 _ 解忧草 - 辞·九门回忆.flac"></audio>
+<audio src="https://cfyy.us.kg/music/106..冰幽 _ 解忧草 - 辞·九门回忆.flac"></source></audio>
 
 ### 107..橙翼 - 春庭雪
 
-<audio src="https://cfyy.us.kg/music/107..橙翼 - 春庭雪.flac"></audio>
+<audio src="https://cfyy.us.kg/music/107..橙翼 - 春庭雪.flac"></source></audio>
 
 ### 108.橙翼 - 五行
 
-<audio src="https://cfyy.us.kg/music/108.橙翼 - 五行.flac"></audio>
+<audio src="https://cfyy.us.kg/music/108.橙翼 - 五行.flac"></source></audio>
 
 ### 109..宝石Gem _ 陈泽 - 这世界我来过
 
-<audio src="https://cfyy.us.kg/music/109..宝石Gem _ 陈泽 - 这世界我来过.flac"></audio>
+<audio src="https://cfyy.us.kg/music/109..宝石Gem _ 陈泽 - 这世界我来过.flac"></source></audio>
 
 ### 110.L（桃籽） - 喝酒不谈情遇人不动心
 
-<audio src="https://cfyy.us.kg/music/110.L（桃籽） - 喝酒不谈情遇人不动心.flac"></audio>
+<audio src="https://cfyy.us.kg/music/110.L（桃籽） - 喝酒不谈情遇人不动心.flac"></source></audio>
 
 ### 111.张德伊玲 - 挥霍
 
-<audio src="https://cfyy.us.kg/music/111.张德伊玲 - 挥霍.flac"></audio>
+<audio src="https://cfyy.us.kg/music/111.张德伊玲 - 挥霍.flac"></source></audio>
 
 ### 112..姜姜 - 四海八荒
 
-<audio src="https://cfyy.us.kg/music/112..姜姜 - 四海八荒.flac"></audio>
+<audio src="https://cfyy.us.kg/music/112..姜姜 - 四海八荒.flac"></source></audio>
 
 ### 113..姜姜 - 莫道
 
-<audio src="https://cfyy.us.kg/music/113..姜姜 - 莫道.flac"></audio>
+<audio src="https://cfyy.us.kg/music/113..姜姜 - 莫道.flac"></source></audio>
 
 ### 114..小少焱 - 上下五千年
 
-<audio src="https://cfyy.us.kg/music/114..小少焱 - 上下五千年.flac"></audio>
+<audio src="https://cfyy.us.kg/music/114..小少焱 - 上下五千年.flac"></source></audio>
 
 ### 115..姜姜 - 落花雨（尘飞舞缓落旧纸扇）
 
-<audio src="https://cfyy.us.kg/music/115..姜姜 - 落花雨（尘飞舞缓落旧纸扇）.flac"></audio>
+<audio src="https://cfyy.us.kg/music/115..姜姜 - 落花雨（尘飞舞缓落旧纸扇）.flac"></source></audio>
 
 ### 116..闻人听書_ - 流光抛
 
-<audio src="https://cfyy.us.kg/music/116..闻人听書_ - 流光抛.flac"></audio>
+<audio src="https://cfyy.us.kg/music/116..闻人听書_ - 流光抛.flac"></source></audio>
 
 ### 117..闻人听書_ - 韶华渡
 
-<audio src="https://cfyy.us.kg/music/117..闻人听書_ - 韶华渡.flac"></audio>
+<audio src="https://cfyy.us.kg/music/117..闻人听書_ - 韶华渡.flac"></source></audio>
 
 ### 118..王莎莎 - 姐就是女王
 
-<audio src="https://cfyy.us.kg/music/118..王莎莎 - 姐就是女王.flac"></audio>
+<audio src="https://cfyy.us.kg/music/118..王莎莎 - 姐就是女王.flac"></source></audio>
 
 ### 119..祖海 - 好运来
 
-<audio src="https://cfyy.us.kg/music/119..祖海 - 好运来.flac"></audio>
+<audio src="https://cfyy.us.kg/music/119..祖海 - 好运来.flac"></source></audio>
 
 ### 120.姜姜 - 千古风流
 
-<audio src="https://cfyy.us.kg/music/120.姜姜 - 千古风流.flac"></audio>
+<audio src="https://cfyy.us.kg/music/120.姜姜 - 千古风流.flac"></source></audio>
 
 ### 121.陈雪凝 - 忘记被忘记
 
-<audio src="https://cfyy.us.kg/music/121.陈雪凝 - 忘记被忘记.flac"></audio>
+<audio src="https://cfyy.us.kg/music/121.陈雪凝 - 忘记被忘记.flac"></source></audio>
 
 ### 122..闻人听書_ - 一念一生叹
 
-<audio src="https://cfyy.us.kg/music/122..闻人听書_ - 一念一生叹.flac"></audio>
+<audio src="https://cfyy.us.kg/music/122..闻人听書_ - 一念一生叹.flac"></source></audio>
