--- a/_posts/2024-10-27-1.md
+++ b/_posts/2024-10-27-1.md
@@ -38,5 +38,6 @@ Markdown/html插入源码：
 
 ### 8.闻人听書_ - 一笑江湖
 
-<audio><source src="https://cfyy.us.kg/music/8.闻人听書_ - 一笑江湖.flac"></source></audio>
+<audio id="audio"  controls="" preload="none" ><source id="flac" src="https://cfyy.us.kg/music/8.闻人听書_ - 一笑江湖.flac"></source></audio>
 
+<audio id="audio" controls="" preload="none">       <source id="mp3" src="音频地址"> </audio>
