--- a/_posts/2024-10-27-1.md
+++ b/_posts/2024-10-27-1.md
@@ -48,4 +48,4 @@ Markdown/html插入源码：
 
 ### 8.闻人听書_ - 一笑江湖
 
-<audio src="https://cfyy.us.kg/music/8.闻人听書_ - 一笑江湖.flac"></audio>
+<audio controls src="https://cfyy.us.kg/music/8.闻人听書_ - 一笑江湖.flac"></audio>
