--- a/_posts/2011-8-19-1.md
+++ b/_posts/2011-8-19-1.md
@@ -1,6 +1,6 @@
 ---
 layout: post
-title: "《殇》我的思想"
+title: "《殇》思想"
 subtitle: ""
 date: 2011-1-1
 author: "TH911"
@@ -13,4 +13,3 @@ tags:
 
 * 没有人会心疼你，除了你自己。
 
-<audio src="https://cfyy.us.kg/music/83..闻人听書_ - 落魄时惊鸿.flac"></audio>
