--- a/_posts/2024-10-17-1.md
+++ b/_posts/2024-10-17-1.md
@@ -83,7 +83,7 @@ tags:
 
 其中，$\color{blue}{x -\lfloor px\rfloor}\color{black}{,}\ \color{red}{x-px}$ 图像如此：
 
-![desmos](https://cfyy.us.kg/img/2024/10/008.png)
+![desmos](/img/2024/10/008.png)
 
 # 处理切割
 
