--- a/_posts/2024-10-20-3.md
+++ b/_posts/2024-10-20-3.md
@@ -38,7 +38,7 @@ $$
 $$
 \large f_{x,i}=\max(f_{x,i-1},f_{x+2^{i-1},i-1})
 $$
-其实和[**倍增LCA**](https://cfyy.us.kg/2024/10/20/2/#%E5%80%8D%E5%A2%9Elca)的转移方程很像~~虽然倍增算法基本都长这样~~，一同理解倍增可能会好一些。
+其实和[**倍增LCA**](/2024/10/20/2/#%E5%80%8D%E5%A2%9Elca)的转移方程很像~~虽然倍增算法基本都长这样~~，一同理解倍增可能会好一些。
 
 ### 预处理
 
