--- a/_posts/2024-10-22-1.md
+++ b/_posts/2024-10-22-1.md
@@ -12,8 +12,8 @@ tags:
 
 也就不说什么了，看图吧：
 
-![](https://cfyy.us.kg/img/2024/10/016.png)
+![](/img/2024/10/016.png)
 
-![](https://cfyy.us.kg/img/2024/10/017.png)
+![](/img/2024/10/017.png)
 
 咱就说原来 $2023$ ~ $2024$ 有 $1024$ 天......
