--- a/_posts/2024-10-23-2.md
+++ b/_posts/2024-10-23-2.md
@@ -16,7 +16,7 @@ tags:
 
 关于题目名称：
 
-![](https://cfyy.us.kg/img/2024/10/020.png)
+![](/img/2024/10/020.png)
 
 ## 题目
 
@@ -88,13 +88,13 @@ tags:
 
 #### 附件
 
-[ex_unnamed.zip](https://cfyy.us.kg/file/2024/10/ex_unnamed.zip)
+[ex_unnamed.zip](/file/2024/10/ex_unnamed.zip)
 
 ## 题解
 
 ### 前置知识：二维数点
 
-参见[离线扫描线二位数点](https://cfyy.us.kg/2024/10/23/3/)。
+参见[离线扫描线二位数点](/2024/10/23/3/)。
 
 ### 解决策略
 
