--- a/_posts/2024-10-23-3.md
+++ b/_posts/2024-10-23-3.md
@@ -18,7 +18,7 @@ tags:
 
 顾名思义，在一个二维平面内求一个矩形内有多少个点（“点”并非指普通几何点，否则有无数个），如图。
 
-![](https://cfyy.us.kg/img/2024/10/021.png)
+![](/img/2024/10/021.png)
 
 我们可以一眼看出：
 
@@ -35,7 +35,7 @@ tags:
 
 思想如图（来源于[OI Wiki](https://oi-wiki.org/geometry/scanning/#%E4%BA%8C%E7%BB%B4%E7%9F%A9%E5%BD%A2%E9%9D%A2%E7%A7%AF%E5%B9%B6%E9%97%AE%E9%A2%98)）：
 
-![](https://cfyy.us.kg/img/2024/10/022.svg)
+![](/img/2024/10/022.svg)
 
 当然，此图展现的是扫描矩形面积并，而不是二维数点，但“点”其实也可以视为 $1\times 1$ 的矩形。
 
@@ -101,7 +101,7 @@ for(int i=1;i<=n;i++){
 
 如图。（为便于观察，错开了蓝色、绿色矩形，不然边框应该有重合部分）
 
-![](https://cfyy.us.kg/img/2024/10/023.png)
+![](/img/2024/10/023.png)
 
 $\color{#FF7F27} \colorbox{#FF7F27}{1}$ 橙色部分，也就是需要求的部分的答案显然等于 $\color{#22B14C}\colorbox{#22B14C}{1}$ 绿色部分减去 $\color{#00A2E8}\colorbox{#00A2E8}{1}$ 蓝色部分的答案。
 
