--- a/_posts/2024-10-25-1.md
+++ b/_posts/2024-10-25-1.md
@@ -34,7 +34,7 @@ tags:
 当 $n$ 超过 $2\times10^4$ 时，$\mathcal O(n^2)$ 的算法便很难在 $1s$ 内得出答案，考虑使用其他方法。
 
 * 字符串哈希，$\mathcal O(n\log_2n)$。
-* 后缀数组+快速LCA，$\mathcal O(n)$。（使用[加减 1RMQ](https://oi-wiki.org/topic/rmq/#%E5%8A%A0%E5%87%8F-1rmq)求解[欧拉序+ST表](https://cfyy.us.kg/2024/10/20/2/#%E6%AC%A7%E6%8B%89%E5%BA%8Fst%E8%A1%A8)的LCA，可以做到 $\mathcal O(n)$ 预处理，$\mathcal O(1)$ 查询）
+* 后缀数组+快速LCA，$\mathcal O(n)$。（使用[加减 1RMQ](https://oi-wiki.org/topic/rmq/#%E5%8A%A0%E5%87%8F-1rmq)求解[欧拉序+ST表](/2024/10/20/2/#%E6%AC%A7%E6%8B%89%E5%BA%8Fst%E8%A1%A8)的LCA，可以做到 $\mathcal O(n)$ 预处理，$\mathcal O(1)$ 查询）
 
 然而，这些算法都不是那么的简单，相比起来这些，***Manacher算法*** 是 **压倒性** 的简单。
 
@@ -86,7 +86,7 @@ $$
 
 对于 $p_{2\times mid+1}$，如图：
 
-![](https://cfyy.us.kg/img/2024/10/024.png)
+![](/img/2024/10/024.png)
 
 其中 $j$ 为 $i$ 关于 $mid$ 的对称点，也就是 $j=2\times mid-i$。
 
