--- a/_posts/2024-10-18-1.md
+++ b/_posts/2024-10-18-1.md
@@ -50,7 +50,7 @@ tags:
 
 $0$ 表示并没有放置国王，$1$ 表示放置了国王。那么比如 $74=(01001010)_2$ 表示的便是这样的一行：
 
-![](https://cfyy.us.kg/img/2024/10/011.png)
+![](/img/2024/10/011.png)
 
 # 考虑状态转移
 
@@ -62,7 +62,7 @@ $0$ 表示并没有放置国王，$1$ 表示放置了国王。那么比如 $74=(
 
 一个很明显的结论是国王周围 $8$ 个格子内**不能**有其他国王（如图）。
 
-![国王放置情况](https://cfyy.us.kg/img/2024/10/012.png)
+![国王放置情况](/img/2024/10/012.png)
 
 蓝色为国王，红色为不能走区域（橙色为红色重合部分），绿色为其他国王可以放置的位置。
 
