--- a/_posts/2024-10-27-1.md
+++ b/_posts/2024-10-27-1.md
@@ -38,240 +38,240 @@ Markdown/html插入源码：
 
 ### 8.闻人听書_ - 一笑江湖
 
-<audio controls src="https://cfyy.us.kg/music/8.闻人听書_ - 一笑江湖.mp3"></audio>
+<audio controls src="/music/8.闻人听書_ - 一笑江湖.mp3"></audio>
 
 ### 20.北京天使合唱团 - 童年
 
-<audio controls src="https://cfyy.us.kg/music/20.北京天使合唱团 - 童年.mp3"></audio>
+<audio controls src="/music/20.北京天使合唱团 - 童年.mp3"></audio>
 
 ### 25.周逸伦 - 青史流芳
 
-<audio controls src="https://cfyy.us.kg/music/25.周逸伦 - 青史流芳.mp3"></audio>
+<audio controls src="/music/25.周逸伦 - 青史流芳.mp3"></audio>
 
 ### 28.Toby Fox - sans.
 
-<audio controls src="https://cfyy.us.kg/music/28.Toby Fox - sans..mp3"></audio>
+<audio controls src="/music/28.Toby Fox - sans..mp3"></audio>
 
 ### 32.Max Elto - Shadow Of The Sun
 
-<audio controls src="https://cfyy.us.kg/music/32.Max Elto - Shadow Of The Sun.mp3"></audio>
+<audio controls src="/music/32.Max Elto - Shadow Of The Sun.mp3"></audio>
 
 ### 36.闻人听書_ - 虞兮叹
 
-<audio controls src="https://cfyy.us.kg/music/36.闻人听書_ - 虞兮叹.mp3"></audio>
+<audio controls src="/music/36.闻人听書_ - 虞兮叹.mp3"></audio>
 
 ### 37.一只白羊 - 赐我(DJ 版)
 
-<audio controls src="https://cfyy.us.kg/music/37.一只白羊 - 赐我(DJ 版).mp3"></audio>
+<audio controls src="/music/37.一只白羊 - 赐我(DJ 版).mp3"></audio>
 
 ### 40.气质隆Sir - 十宗罪 (治愈系)
 
-<audio controls src="https://cfyy.us.kg/music/40.气质隆Sir - 十宗罪 (治愈系).mp3"></audio>
+<audio controls src="/music/40.气质隆Sir - 十宗罪 (治愈系).mp3"></audio>
 
 ### 44..就是南方凯 - 樱花树下的约定
 
-<audio controls src="https://cfyy.us.kg/music/44..就是南方凯 - 樱花树下的约定.mp3"></audio>
+<audio controls src="/music/44..就是南方凯 - 樱花树下的约定.mp3"></audio>
 
 ### 45.小炎同学 - 我不是救世主
 
-<audio controls src="https://cfyy.us.kg/music/45.小炎同学 - 我不是救世主.mp3"></audio>
+<audio controls src="/music/45.小炎同学 - 我不是救世主.mp3"></audio>
 
 ### 47.邓寓君(等什么君) - 辞九门回忆
 
-<audio controls src="https://cfyy.us.kg/music/47.邓寓君(等什么君) - 辞九门回忆.mp3"></audio>
+<audio controls src="/music/47.邓寓君(等什么君) - 辞九门回忆.mp3"></audio>
 
 ### 51.就是南方凯 - 离别思故乡
 
-<audio controls src="https://cfyy.us.kg/music/51.就是南方凯 - 离别思故乡.mp3"></audio>
+<audio controls src="/music/51.就是南方凯 - 离别思故乡.mp3"></audio>
 
 ### 52..刀酱 - 5:20AM（我在5:20睡觉13:14准时起）
 
-<audio controls src="https://cfyy.us.kg/music/52..刀酱 - 5：20AM（我在5：20睡觉13：14准时起）.mp3"></audio>
+<audio controls src="/music/52..刀酱 - 5：20AM（我在5：20睡觉13：14准时起）.mp3"></audio>
 
 ### 53..soldier-5:20AM
 
-<audio controls src="https://cfyy.us.kg/music/53..soldier-5：20AM.mp3"></audio>
+<audio controls src="/music/53..soldier-5：20AM.mp3"></audio>
 
 ### 56.邓寓君(等什么君) - 许期赴繁花
 
-<audio controls src="https://cfyy.us.kg/music/56.邓寓君(等什么君) - 许期赴繁花.mp3"></audio>
+<audio controls src="/music/56.邓寓君(等什么君) - 许期赴繁花.mp3"></audio>
 
 ### 58.善宇 - 班师回朝
 
-<audio controls src="https://cfyy.us.kg/music/58.善宇 - 班师回朝.mp3"></audio>
+<audio controls src="/music/58.善宇 - 班师回朝.mp3"></audio>
 
 ### 67.丸子呦 - 广寒宫
 
-<audio controls src="https://cfyy.us.kg/music/67.丸子呦 - 广寒宫.mp3"></audio>
+<audio controls src="/music/67.丸子呦 - 广寒宫.mp3"></audio>
 
 ### 81..姜姜 - 鬓上曾簪花
 
-<audio controls src="https://cfyy.us.kg/music/81..姜姜 - 鬓上曾簪花.mp3"></audio>
+<audio controls src="/music/81..姜姜 - 鬓上曾簪花.mp3"></audio>
 
 ### 82..蔡琴 _ 余天 _ 苏芮 _ 潘越云 _ 甄妮 _ 李建复 _ 林慧萍 _ 王芷蕾 _ 黄莺莺 _ 洪荣宏 _ 陈淑桦 _ 娃娃 _ 王梦麟 _ 李珮菁 _ 费玉清 _ 齐豫 _ 郑怡 _ 江蕙 _ 杨林 _ 齐秦 - 明天会更好
 
-<audio controls src="https://cfyy.us.kg/music/82..蔡琴 _ 余天 _ 苏芮 _ 潘越云 _ 甄妮 _ 李建复 _ 林慧萍 _ 王芷蕾 _ 黄莺莺 _ 洪荣宏 _ 陈淑桦 _ 娃娃 _ 王梦麟 _ 李珮菁 _ 费玉清 _ 齐豫 _ 郑怡 _ 江蕙 _ 杨林 _ 齐秦 - 明天会更好.mp3"></audio>
+<audio controls src="/music/82..蔡琴 _ 余天 _ 苏芮 _ 潘越云 _ 甄妮 _ 李建复 _ 林慧萍 _ 王芷蕾 _ 黄莺莺 _ 洪荣宏 _ 陈淑桦 _ 娃娃 _ 王梦麟 _ 李珮菁 _ 费玉清 _ 齐豫 _ 郑怡 _ 江蕙 _ 杨林 _ 齐秦 - 明天会更好.mp3"></audio>
 
 ### 83..闻人听書_ - 落魄时惊鸿
 
-<audio controls src="https://cfyy.us.kg/music/83..闻人听書_ - 落魄时惊鸿.mp3"></audio>
+<audio controls src="/music/83..闻人听書_ - 落魄时惊鸿.mp3"></audio>
 
 ~~是惊**鸿**！不是惊**魂**！！！~~
 
 ### 84..陈奕迅 - 孤勇者
 
-<audio controls src="https://cfyy.us.kg/music/84..陈奕迅 - 孤勇者.mp3"></audio>
+<audio controls src="/music/84..陈奕迅 - 孤勇者.mp3"></audio>
 
 ### 85..张杰 - 逆战
 
-<audio controls src="https://cfyy.us.kg/music/85..张杰 - 逆战.mp3"></audio>
+<audio controls src="/music/85..张杰 - 逆战.mp3"></audio>
 
 ### 86.姜姜 - 共书人间
 
-<audio controls src="https://cfyy.us.kg/music/86.姜姜 - 共书人间.mp3"></audio>
+<audio controls src="/music/86.姜姜 - 共书人间.mp3"></audio>
 
 ### 87.七叔（叶泽浩） - 故国叹
 
-<audio controls src="https://cfyy.us.kg/music/87.七叔（叶泽浩） - 故国叹.mp3"></audio>
+<audio controls src="/music/87.七叔（叶泽浩） - 故国叹.mp3"></audio>
 
 ### 88..姜姜 - 弹指芳华
 
-<audio controls src="https://cfyy.us.kg/music/88..姜姜 - 弹指芳华.mp3"></audio>
+<audio controls src="/music/88..姜姜 - 弹指芳华.mp3"></audio>
 
 ### 89.张德伊玲 - 万物不相拥
 
-<audio controls src="https://cfyy.us.kg/music/89.张德伊玲 - 万物不相拥.mp3"></audio>
+<audio controls src="/music/89.张德伊玲 - 万物不相拥.mp3"></audio>
 
 ### 90..闻人听書_ - 洛南·仓颉颂
 
-<audio controls src="https://cfyy.us.kg/music/90..闻人听書_ - 洛南·仓颉颂.mp3"></audio>
+<audio controls src="/music/90..闻人听書_ - 洛南·仓颉颂.mp3"></audio>
 
 ### 91..张德伊玲 - 回忆航线
 
-<audio controls src="https://cfyy.us.kg/music/91..张德伊玲 - 回忆航线.mp3"></audio>
+<audio controls src="/music/91..张德伊玲 - 回忆航线.mp3"></audio>
 
 ### 92..张德伊玲 - 你只是路过我身边
 
-<audio controls src="https://cfyy.us.kg/music/92..张德伊玲 - 你只是路过我身边.mp3"></audio>
+<audio controls src="/music/92..张德伊玲 - 你只是路过我身边.mp3"></audio>
 
 ### 93..陈雪凝 - 白山茶
 
-<audio controls src="https://cfyy.us.kg/music/93..陈雪凝 - 白山茶.mp3"></audio>
+<audio controls src="/music/93..陈雪凝 - 白山茶.mp3"></audio>
 
 ### 94.RE-D_是二哈ya - 如果我们在余生相遇·双鱼座 (变调版）
 
-<audio controls src="https://cfyy.us.kg/music/94.RE-D_是二哈ya - 如果我们在余生相遇·双鱼座 (变调版）.mp3"></audio>
+<audio controls src="/music/94.RE-D_是二哈ya - 如果我们在余生相遇·双鱼座 (变调版）.mp3"></audio>
 
 ### 95..黄龄 - 痒
 
-<audio controls src="https://cfyy.us.kg/music/95..黄龄 - 痒.mp3"></audio>
+<audio controls src="/music/95..黄龄 - 痒.mp3"></audio>
 
 **$\color{red}\text{从来没有什么所谓的禁曲，仅仅在于你从什么角度来解读。}$**
 
 ### 96..L（桃籽） - 此去半生
 
-<audio controls src="https://cfyy.us.kg/music/96..L（桃籽） - 此去半生.mp3"></audio>
+<audio controls src="/music/96..L（桃籽） - 此去半生.mp3"></audio>
 
 ### 97..许镜清 - 云宫迅音
 
-<audio controls src="https://cfyy.us.kg/music/97..许镜清 - 云宫迅音.mp3"></audio>
+<audio controls src="/music/97..许镜清 - 云宫迅音.mp3"></audio>
 
 ### 98..奇然 _ 沈谧仁 - 琵琶行
 
-<audio controls src="https://cfyy.us.kg/music/98..奇然 _ 沈谧仁 - 琵琶行.mp3"></audio>
+<audio controls src="/music/98..奇然 _ 沈谧仁 - 琵琶行.mp3"></audio>
 
 ### 99.张德伊玲 - 我穿过烟火人间
 
-<audio controls src="https://cfyy.us.kg/music/99.张德伊玲 - 我穿过烟火人间.mp3"></audio>
+<audio controls src="/music/99.张德伊玲 - 我穿过烟火人间.mp3"></audio>
 
 ### 100..就是南方凯 - 风吹吹就停了
 
-<audio controls src="https://cfyy.us.kg/music/100..就是南方凯 - 风吹吹就停了.mp3"></audio>
+<audio controls src="/music/100..就是南方凯 - 风吹吹就停了.mp3"></audio>
 
 ### 101..张德伊玲 - 你本就是骄阳
 
-<audio controls src="https://cfyy.us.kg/music/101..张德伊玲 - 你本就是骄阳.mp3"></audio>
+<audio controls src="/music/101..张德伊玲 - 你本就是骄阳.mp3"></audio>
 
 ### 102..就是南方凯 - 我自有我的月亮
 
-<audio controls src="https://cfyy.us.kg/music/102..就是南方凯 - 我自有我的月亮.mp3"></audio>
+<audio controls src="/music/102..就是南方凯 - 我自有我的月亮.mp3"></audio>
 
 ### 103..就是南方凯 - 偏向 (为何会两败俱伤)
 
-<audio controls src="https://cfyy.us.kg/music/103..就是南方凯 - 偏向 (为何会两败俱伤).mp3"></audio>
+<audio controls src="/music/103..就是南方凯 - 偏向 (为何会两败俱伤).mp3"></audio>
 
 ### 104..张德伊玲 - 落日烟火
 
-<audio controls src="https://cfyy.us.kg/music/104..张德伊玲 - 落日烟火.mp3"></audio>
+<audio controls src="/music/104..张德伊玲 - 落日烟火.mp3"></audio>
 
 ### 105..yihuik苡慧 - 银河与星斗
 
-<audio controls src="https://cfyy.us.kg/music/105..yihuik苡慧 - 银河与星斗.mp3"></audio>
+<audio controls src="/music/105..yihuik苡慧 - 银河与星斗.mp3"></audio>
 
 ### 106..冰幽 _ 解忧草 - 辞·九门回忆
 
-<audio controls src="https://cfyy.us.kg/music/106..冰幽 _ 解忧草 - 辞·九门回忆.mp3"></audio>
+<audio controls src="/music/106..冰幽 _ 解忧草 - 辞·九门回忆.mp3"></audio>
 
 ### 107..橙翼 - 春庭雪
 
-<audio controls src="https://cfyy.us.kg/music/107..橙翼 - 春庭雪.mp3"></audio>
+<audio controls src="/music/107..橙翼 - 春庭雪.mp3"></audio>
 
 ### 108.橙翼 - 五行
 
-<audio controls src="https://cfyy.us.kg/music/108.橙翼 - 五行.mp3"></audio>
+<audio controls src="/music/108.橙翼 - 五行.mp3"></audio>
 
 ### 109..宝石Gem _ 陈泽 - 这世界我来过
 
-<audio controls src="https://cfyy.us.kg/music/109..宝石Gem _ 陈泽 - 这世界我来过.mp3"></audio>
+<audio controls src="/music/109..宝石Gem _ 陈泽 - 这世界我来过.mp3"></audio>
 
 ### 110.L（桃籽） - 喝酒不谈情遇人不动心
 
-<audio controls src="https://cfyy.us.kg/music/110.L（桃籽） - 喝酒不谈情遇人不动心.mp3"></audio>
+<audio controls src="/music/110.L（桃籽） - 喝酒不谈情遇人不动心.mp3"></audio>
 
 ### 111.张德伊玲 - 挥霍
 
-<audio controls src="https://cfyy.us.kg/music/111.张德伊玲 - 挥霍.mp3"></audio>
+<audio controls src="/music/111.张德伊玲 - 挥霍.mp3"></audio>
 
 ### 112..姜姜 - 四海八荒
 
-<audio controls src="https://cfyy.us.kg/music/112..姜姜 - 四海八荒.mp3"></audio>
+<audio controls src="/music/112..姜姜 - 四海八荒.mp3"></audio>
 
 ### 113..姜姜 - 莫道
 
-<audio controls src="https://cfyy.us.kg/music/113..姜姜 - 莫道.mp3"></audio>
+<audio controls src="/music/113..姜姜 - 莫道.mp3"></audio>
 
 ### 114..小少焱 - 上下五千年
 
-<audio controls src="https://cfyy.us.kg/music/114..小少焱 - 上下五千年.mp3"></audio>
+<audio controls src="/music/114..小少焱 - 上下五千年.mp3"></audio>
 
 ### 115..姜姜 - 落花雨（尘飞舞缓落旧纸扇）
 
-<audio controls src="https://cfyy.us.kg/music/115..姜姜 - 落花雨（尘飞舞缓落旧纸扇）.mp3"></audio>
+<audio controls src="/music/115..姜姜 - 落花雨（尘飞舞缓落旧纸扇）.mp3"></audio>
 
 ### 116..闻人听書_ - 流光抛
 
-<audio controls src="https://cfyy.us.kg/music/116..闻人听書_ - 流光抛.mp3"></audio>
+<audio controls src="/music/116..闻人听書_ - 流光抛.mp3"></audio>
 
 ### 117..闻人听書_ - 韶华渡
 
-<audio controls src="https://cfyy.us.kg/music/117..闻人听書_ - 韶华渡.mp3"></audio>
+<audio controls src="/music/117..闻人听書_ - 韶华渡.mp3"></audio>
 
 ### 118..王莎莎 - 姐就是女王
 
-<audio controls src="https://cfyy.us.kg/music/118..王莎莎 - 姐就是女王.mp3"></audio>
+<audio controls src="/music/118..王莎莎 - 姐就是女王.mp3"></audio>
 
 ### 119..祖海 - 好运来
 
-<audio controls src="https://cfyy.us.kg/music/119..祖海 - 好运来.mp3"></audio>
+<audio controls src="/music/119..祖海 - 好运来.mp3"></audio>
 
 ### 120.姜姜 - 千古风流
 
-<audio controls src="https://cfyy.us.kg/music/120.姜姜 - 千古风流.mp3"></audio>
+<audio controls src="/music/120.姜姜 - 千古风流.mp3"></audio>
 
 ### 121.陈雪凝 - 忘记被忘记
 
-<audio controls src="https://cfyy.us.kg/music/121.陈雪凝 - 忘记被忘记.mp3"></audio>
+<audio controls src="/music/121.陈雪凝 - 忘记被忘记.mp3"></audio>
 
 ### 122..闻人听書_ - 一念一生叹
 
-<audio controls src="https://cfyy.us.kg/music/122..闻人听書_ - 一念一生叹.mp3"></audio>
+<audio controls src="/music/122..闻人听書_ - 一念一生叹.mp3"></audio>
