--- a/_posts/2024-10-27-1.md
+++ b/_posts/2024-10-27-1.md
@@ -28,9 +28,9 @@ Markdown/html插入源码：
 
 * F12抓包
 
-* `https://cfyy.us.kg/music/` +标题名称+`.mp3`。
+* `https://cfyy.us.kg/music/` +编号+`.mp3`。
 
-  如：[https://cfyy.us.kg/music/8.闻人听書_ - 一笑江湖.mp3](https://cfyy.us.kg/music/8.闻人听書_ - 一笑江湖.mp3)。
+  如：[https://cfyy.us.kg/music/8.mp3](https://cfyy.us.kg/music/8.mp3)。
 
 * 查看GitHub源码。
 
@@ -38,11 +38,11 @@ Markdown/html插入源码：
 
 ### 8.闻人听書_ - 一笑江湖
 
-<audio controls src="/music/8.闻人听書_ - 一笑江湖.mp3"></audio>
+<audio controls src="/music/8.mp3"></audio>
 
 ### 20.北京天使合唱团 - 童年
 
-<audio controls src="/music/20.北京天使合唱团 - 童年.mp3"></audio>
+<audio controls src="/music/20.mp3"></audio>
 
 ### 25.周逸伦 - 青史流芳
 
