--- a/_posts/2024-10-27-1.md
+++ b/_posts/2024-10-27-1.md
@@ -30,248 +30,504 @@ Markdown/html插入源码：
 
 * `https://cfyy.us.kg/music/` +编号+`.mp3`。
 
-  如：[https://cfyy.us.kg/music/8.mp3](https://cfyy.us.kg/music/8.mp3)。
+  如：<https://cfyy.us.kg/music/8.mp3>。
 
 * 查看GitHub源码。
 
+***
+
+`.mp3` 都是**有损**压缩过的，主要是挂Cloudflare缓存搞CDN。`.flac` 母带无损可以参考[此处](https://share.feijipan.com/s/DNC5iGc1)。
+
 ## 仓库
+
+### 1.陈雪凝 - 你的酒馆对我打了烊
+
+<audio controls src="/music/1.mp3"></audio>
+
+### 2.陈雪凝 - 没有人心疼我
+
+<audio controls src="/music/2.mp3"></audio>
+
+### 3.就是南方凯 - 离别开出花
+
+<audio controls src="/music/3.mp3"></audio>
+
+### 4.刘若英 - 后来
+
+<audio controls src="/music/4.mp3"></audio>
+
+### 5.刘若英 - 后来 (2010音乐万万岁现场版）
+
+<audio controls src="/music/5.mp3"></audio>
+
+### 6.小炎同学 - 天下的乌鸦一般黑
+
+<audio controls src="/music/6.mp3"></audio>
+
+### 7.姜姜 - 一笑江湖
+
+<audio controls src="/music/7.mp3"></audio>
 
 ### 8.闻人听書_ - 一笑江湖
 
 <audio controls src="/music/8.mp3"></audio>
 
+### 9.张德伊玲 - 三拜红尘凉
+
+<audio controls src="/music/9.mp3"></audio>
+
+### 10.善宇 - 做自己的光，不需要太亮
+
+<audio controls src="/music/10.mp3"></audio>
+
+### 11.就是南方凯 - 秋殇别恋
+
+<audio controls src="/music/11.mp3"></audio>
+
+### 12.Alan Walker/Noah Cyrus/Digital Farm Animals/Juliander - All Falls Down
+
+<audio controls src="/music/12.mp3"></audio>
+
+### 13.南征北战NZBZ - 骄傲的少年
+
+<audio controls src="/music/13.mp3"></audio>
+
+### 14.李玉刚 - 万疆
+
+<audio controls src="/music/14.mp3"></audio>
+
+### 15.TheFatRat - Unity
+
+<audio controls src="/music/15.mp3"></audio>
+
+### 16.HITA - 赤伶
+
+<audio controls src="/music/16.mp3"></audio>
+
+### 17.周杰伦 - 青花瓷
+
+<audio controls src="/music/17.mp3"></audio>
+
+### 18.张杰 - 少年中国说
+
+<audio controls src="/music/18.mp3"></audio>
+
+### 19.要不要买菜 - 火红的萨日朗
+
+<audio controls src="/music/19.mp3"></audio>
+
 ### 20.北京天使合唱团 - 童年
 
 <audio controls src="/music/20.mp3"></audio>
 
+### 21.梦然 - 少年
+
+<audio controls src="/music/21.mp3"></audio>
+
+### 22.七叔（叶泽浩） - 踏山河
+
+<audio controls src="/music/22.mp3"></audio>
+
+### 23.陈柯宇 - 生僻字
+
+<audio controls src="/music/23.mp3"></audio>
+
+### 24.凌丰 - 三两三
+
+<audio controls src="/music/24.mp3"></audio>
+
 ### 25.周逸伦 - 青史流芳
 
-<audio controls src="/music/25.周逸伦 - 青史流芳.mp3"></audio>
+<audio controls src="/music/25.mp3"></audio>
+
+### 26.要不要买菜 - 下山
+
+<audio controls src="/music/26.mp3"></audio>
+
+### 27.Kelly Clarkson - Stronger (What Doesn't Kill You)
+
+<audio controls src="/music/27.mp3"></audio>
 
 ### 28.Toby Fox - sans.
 
-<audio controls src="/music/28.Toby Fox - sans..mp3"></audio>
+<audio controls src="/music/28.mp3"></audio>
+
+### 29.初音未来 - 千本桜
+
+<audio controls src="/music/29.mp3"></audio>
+
+### 30.朴树 - 平凡之路
+
+<audio controls src="/music/30.mp3"></audio>
+
+### 31.邓寓君(等什么君) - 春庭雪
+
+<audio controls src="/music/31.mp3"></audio>
 
 ### 32.Max Elto - Shadow Of The Sun
 
-<audio controls src="/music/32.Max Elto - Shadow Of The Sun.mp3"></audio>
+<audio controls src="/music/32.mp3"></audio>
+
+### 33.Ramin Djawadi/Tom Morello - Pacific Rim (feat. Tom Morello)
+
+<audio controls src="/music/33.mp3"></audio>
+
+### 34.陈雪凝 - 绿色
+
+<audio controls src="/music/34.mp3"></audio>
+
+### 35.就是南方凯 - 列车开往春天
+
+<audio controls src="/music/34.mp3"></audio>
 
 ### 36.闻人听書_ - 虞兮叹
 
-<audio controls src="/music/36.闻人听書_ - 虞兮叹.mp3"></audio>
+<audio controls src="/music/36.mp3"></audio>
 
 ### 37.一只白羊 - 赐我(DJ 版)
 
-<audio controls src="/music/37.一只白羊 - 赐我(DJ 版).mp3"></audio>
+<audio controls src="/music/37.mp3"></audio>
+
+### 38.Alan Walker - Faded
+
+<audio controls src="/music/38.mp3"></audio>
+
+### 39.就是南方凯 - 巡光
+
+<audio controls src="/music/39.mp3"></audio>
 
 ### 40.气质隆Sir - 十宗罪 (治愈系)
 
-<audio controls src="/music/40.气质隆Sir - 十宗罪 (治愈系).mp3"></audio>
+<audio controls src="/music/40.mp3"></audio>
 
-### 44..就是南方凯 - 樱花树下的约定
+### 41.一只白羊 - 赐我
 
-<audio controls src="/music/44..就是南方凯 - 樱花树下的约定.mp3"></audio>
+<audio controls src="/music/41.mp3"></audio>
+
+### 42.周杰伦 - 最伟大的作品
+
+<audio controls src="/music/42.mp3"></audio>
+
+### 43.就是南方凯 - 列车开往春天（每个梦都会实现）
+
+<audio controls src="/music/43.mp3"></audio>
+
+### 44.就是南方凯 - 樱花树下的约定
+
+<audio controls src="/music/44.mp3"></audio>
 
 ### 45.小炎同学 - 我不是救世主
 
-<audio controls src="/music/45.小炎同学 - 我不是救世主.mp3"></audio>
+<audio controls src="/music/45.mp3"></audio>
+
+### 46.凤凰传奇 - 最炫民族风
+
+<audio controls src="/music/46.mp3"></audio>
 
 ### 47.邓寓君(等什么君) - 辞九门回忆
 
-<audio controls src="/music/47.邓寓君(等什么君) - 辞九门回忆.mp3"></audio>
+<audio controls src="/music/47.mp3"></audio>
+
+### 48.善宇 - 翻
+
+<audio controls src="/music/48.mp3"></audio>
+
+### 49.就是南方凯 - 万拒
+
+<audio controls src="/music/49.mp3"></audio>
+
+### 50.就是南方凯 - 你就是远方
+
+<audio controls src="/music/50.mp3"></audio>
 
 ### 51.就是南方凯 - 离别思故乡
 
-<audio controls src="/music/51.就是南方凯 - 离别思故乡.mp3"></audio>
+<audio controls src="/music/51.mp3"></audio>
 
-### 52..刀酱 - 5:20AM（我在5:20睡觉13:14准时起）
+### 52.刀酱 - 5:20AM（我在5:20睡觉13:14准时起）
 
-<audio controls src="/music/52..刀酱 - 5：20AM（我在5：20睡觉13：14准时起）.mp3"></audio>
+<audio controls src="/music/52.mp3"></audio>
 
-### 53..soldier-5:20AM
+### 53.soldier-5:20AM
 
-<audio controls src="/music/53..soldier-5：20AM.mp3"></audio>
+<audio controls src="/music/53.mp3"></audio>
+
+### 54.张杰/张碧晨 - 只要平凡
+
+<audio controls src="/music/54.mp3"></audio>
+
+### 55.Alan Walker/Anne Gudrun - End of The World
+
+<audio controls src="/music/55.mp3"></audio>
 
 ### 56.邓寓君(等什么君) - 许期赴繁花
 
-<audio controls src="/music/56.邓寓君(等什么君) - 许期赴繁花.mp3"></audio>
+<audio controls src="/music/56.mp3"></audio>
+
+### 57.张德伊玲 - 山海皆所爱
+
+<audio controls src="/music/57.mp3"></audio>
 
 ### 58.善宇 - 班师回朝
 
-<audio controls src="/music/58.善宇 - 班师回朝.mp3"></audio>
+<audio controls src="/music/58.mp3"></audio>
+
+### 59.姜姜 - 龙醒东方
+
+<audio controls src="/music/59.mp3"></audio>
+
+### 60.七叔（叶泽浩） - 龙醒东方
+
+<audio controls src="/music/60.mp3"></audio>
+
+### 61.就是南方凯 - 拥抱太阳
+
+<audio controls src="/music/61.mp3"></audio>
+
+### 62.张德伊玲 - 孤独王冠
+
+<audio controls src="/music/62.mp3"></audio>
+
+### 63.邓寓君(等什么君)/万妮达Vinida Weng - 大中华
+
+<audio controls src="/music/63.mp3"></audio>
+
+### 64.就是南方凯 - 有你的远方
+
+<audio controls src="/music/64.mp3"></audio>
+
+### 65.刘若英 - 十年
+
+<audio controls src="/music/65.mp3"></audio>
+
+### 66.吴碧霞 - 广寒宫
+
+<audio controls src="/music/66.mp3"></audio>
 
 ### 67.丸子呦 - 广寒宫
 
-<audio controls src="/music/67.丸子呦 - 广寒宫.mp3"></audio>
+<audio controls src="/music/67.mp3"></audio>
 
-### 81..姜姜 - 鬓上曾簪花
+### 68.中国爱乐乐团 - 月亮之上
 
-<audio controls src="/music/81..姜姜 - 鬓上曾簪花.mp3"></audio>
+<audio controls src="/music/68.mp3"></audio>
 
-### 82..蔡琴 _ 余天 _ 苏芮 _ 潘越云 _ 甄妮 _ 李建复 _ 林慧萍 _ 王芷蕾 _ 黄莺莺 _ 洪荣宏 _ 陈淑桦 _ 娃娃 _ 王梦麟 _ 李珮菁 _ 费玉清 _ 齐豫 _ 郑怡 _ 江蕙 _ 杨林 _ 齐秦 - 明天会更好
+### 69.中国爱乐乐团 - 荷塘月色
 
-<audio controls src="/music/82..蔡琴 _ 余天 _ 苏芮 _ 潘越云 _ 甄妮 _ 李建复 _ 林慧萍 _ 王芷蕾 _ 黄莺莺 _ 洪荣宏 _ 陈淑桦 _ 娃娃 _ 王梦麟 _ 李珮菁 _ 费玉清 _ 齐豫 _ 郑怡 _ 江蕙 _ 杨林 _ 齐秦 - 明天会更好.mp3"></audio>
+<audio controls src="/music/69.mp3"></audio>
 
-### 83..闻人听書_ - 落魄时惊鸿
+### 70.中国爱乐乐团 - 开门大吉
 
-<audio controls src="/music/83..闻人听書_ - 落魄时惊鸿.mp3"></audio>
+<audio controls src="/music/70.mp3"></audio>
+
+### 71.中国爱乐乐团 - 一代天骄
+
+<audio controls src="/music/71.mp3"></audio>
+
+### 72.中国爱乐乐团 - 我和草原有个约定
+
+<audio controls src="/music/72.mp3"></audio>
+
+### 73.中国爱乐乐团 - 沙漠之恋
+
+<audio controls src="/music/73.mp3"></audio>
+
+### 74.中国爱乐乐团 - 醉美天下
+
+<audio controls src="/music/74.mp3"></audio>
+
+### 75.中国爱乐乐团 - 吉祥如意
+
+<audio controls src="/music/75.mp3"></audio>
+
+### 76.中国爱乐乐团 - 自由飞翔
+
+<audio controls src="/music/76.mp3"></audio>
+
+### 77.中国爱乐乐团 - 策马奔腾
+
+<audio controls src="/music/77.mp3"></audio>
+
+### 78.中国爱乐乐团 - 最好的时代
+
+<audio controls src="/music/78.mp3"></audio>
+
+### 79.中国爱乐乐团 - 最炫民族风
+
+<audio controls src="/music/79.mp3"></audio>
+
+### 80.中国爱乐乐团 - 中国味道
+
+<audio controls src="/music/80.mp3"></audio>
+
+### 81.姜姜 - 鬓上曾簪花
+
+<audio controls src="/music/81.mp3"></audio>
+
+### 82.蔡琴/余天/苏芮/潘越云/甄妮/李建复/林慧萍/王芷蕾/黄莺莺/洪荣宏/陈淑桦/娃娃/王梦麟/李珮菁/费玉清/齐豫/郑怡/江蕙/杨林/齐秦 - 明天会更好
+
+<audio controls src="/music/82.mp3"></audio>
+
+### 83.闻人听書_ - 落魄时惊鸿
+
+<audio controls src="/music/83.mp3"></audio>
 
 ~~是惊**鸿**！不是惊**魂**！！！~~
 
-### 84..陈奕迅 - 孤勇者
+### 84.陈奕迅 - 孤勇者
 
-<audio controls src="/music/84..陈奕迅 - 孤勇者.mp3"></audio>
+<audio controls src="/music/84.mp3"></audio>
 
-### 85..张杰 - 逆战
+### 85.张杰 - 逆战
 
-<audio controls src="/music/85..张杰 - 逆战.mp3"></audio>
+<audio controls src="/music/85.mp3"></audio>
 
 ### 86.姜姜 - 共书人间
 
-<audio controls src="/music/86.姜姜 - 共书人间.mp3"></audio>
+<audio controls src="/music/86.mp3"></audio>
 
 ### 87.七叔（叶泽浩） - 故国叹
 
-<audio controls src="/music/87.七叔（叶泽浩） - 故国叹.mp3"></audio>
+<audio controls src="/music/87.mp3"></audio>
 
-### 88..姜姜 - 弹指芳华
+### 88.姜姜 - 弹指芳华
 
-<audio controls src="/music/88..姜姜 - 弹指芳华.mp3"></audio>
+<audio controls src="/music/88.mp3"></audio>
 
 ### 89.张德伊玲 - 万物不相拥
 
-<audio controls src="/music/89.张德伊玲 - 万物不相拥.mp3"></audio>
+<audio controls src="/music/89.mp3"></audio>
 
-### 90..闻人听書_ - 洛南·仓颉颂
+### 90.闻人听書_ - 洛南·仓颉颂
 
-<audio controls src="/music/90..闻人听書_ - 洛南·仓颉颂.mp3"></audio>
+<audio controls src="/music/90.mp3"></audio>
 
-### 91..张德伊玲 - 回忆航线
+### 91.张德伊玲 - 回忆航线
 
-<audio controls src="/music/91..张德伊玲 - 回忆航线.mp3"></audio>
+<audio controls src="/music/91.mp3"></audio>
 
-### 92..张德伊玲 - 你只是路过我身边
+### 92.张德伊玲 - 你只是路过我身边
 
-<audio controls src="/music/92..张德伊玲 - 你只是路过我身边.mp3"></audio>
+<audio controls src="/music/92.mp3"></audio>
 
-### 93..陈雪凝 - 白山茶
+### 93.陈雪凝 - 白山茶
 
-<audio controls src="/music/93..陈雪凝 - 白山茶.mp3"></audio>
+<audio controls src="/music/93.mp3"></audio>
 
 ### 94.RE-D_是二哈ya - 如果我们在余生相遇·双鱼座 (变调版）
 
-<audio controls src="/music/94.RE-D_是二哈ya - 如果我们在余生相遇·双鱼座 (变调版）.mp3"></audio>
+<audio controls src="/music/94.mp3"></audio>
 
-### 95..黄龄 - 痒
+### 95.黄龄 - 痒
 
-<audio controls src="/music/95..黄龄 - 痒.mp3"></audio>
+<audio controls src="/music/95.mp3"></audio>
 
 **$\color{red}\text{从来没有什么所谓的禁曲，仅仅在于你从什么角度来解读。}$**
 
-### 96..L（桃籽） - 此去半生
+### 96.L（桃籽） - 此去半生
 
-<audio controls src="/music/96..L（桃籽） - 此去半生.mp3"></audio>
+<audio controls src="/music/96.mp3"></audio>
 
-### 97..许镜清 - 云宫迅音
+### 97.许镜清 - 云宫迅音
 
-<audio controls src="/music/97..许镜清 - 云宫迅音.mp3"></audio>
+<audio controls src="/music/97.mp3"></audio>
 
-### 98..奇然 _ 沈谧仁 - 琵琶行
+### 98.奇然/沈谧仁 - 琵琶行
 
-<audio controls src="/music/98..奇然 _ 沈谧仁 - 琵琶行.mp3"></audio>
+<audio controls src="/music/98.mp3"></audio>
 
 ### 99.张德伊玲 - 我穿过烟火人间
 
-<audio controls src="/music/99.张德伊玲 - 我穿过烟火人间.mp3"></audio>
+<audio controls src="/music/99.mp3"></audio>
 
-### 100..就是南方凯 - 风吹吹就停了
+### 100.就是南方凯 - 风吹吹就停了
 
-<audio controls src="/music/100..就是南方凯 - 风吹吹就停了.mp3"></audio>
+<audio controls src="/music/100.mp3"></audio>
 
-### 101..张德伊玲 - 你本就是骄阳
+### 101.张德伊玲 - 你本就是骄阳
 
-<audio controls src="/music/101..张德伊玲 - 你本就是骄阳.mp3"></audio>
+<audio controls src="/music/101.mp3"></audio>
 
-### 102..就是南方凯 - 我自有我的月亮
+### 102.就是南方凯 - 我自有我的月亮
 
-<audio controls src="/music/102..就是南方凯 - 我自有我的月亮.mp3"></audio>
+<audio controls src="/music/102.mp3"></audio>
 
-### 103..就是南方凯 - 偏向 (为何会两败俱伤)
+### 103.就是南方凯 - 偏向 (为何会两败俱伤)
 
-<audio controls src="/music/103..就是南方凯 - 偏向 (为何会两败俱伤).mp3"></audio>
+<audio controls src="/music/103.mp3"></audio>
 
-### 104..张德伊玲 - 落日烟火
+### 104.张德伊玲 - 落日烟火
 
-<audio controls src="/music/104..张德伊玲 - 落日烟火.mp3"></audio>
+<audio controls src="/music/104.mp3"></audio>
 
-### 105..yihuik苡慧 - 银河与星斗
+### 105.yihuik苡慧 - 银河与星斗
 
-<audio controls src="/music/105..yihuik苡慧 - 银河与星斗.mp3"></audio>
+<audio controls src="/music/105.mp3"></audio>
 
-### 106..冰幽 _ 解忧草 - 辞·九门回忆
+### 106.冰幽/解忧草 - 辞·九门回忆
 
-<audio controls src="/music/106..冰幽 _ 解忧草 - 辞·九门回忆.mp3"></audio>
+<audio controls src="/music/106.mp3"></audio>
 
-### 107..橙翼 - 春庭雪
+### 107.橙翼 - 春庭雪
 
-<audio controls src="/music/107..橙翼 - 春庭雪.mp3"></audio>
+<audio controls src="/music/107.mp3"></audio>
 
 ### 108.橙翼 - 五行
 
-<audio controls src="/music/108.橙翼 - 五行.mp3"></audio>
+<audio controls src="/music/108.mp3"></audio>
 
-### 109..宝石Gem _ 陈泽 - 这世界我来过
+### 109.宝石Gem/陈泽 - 这世界我来过
 
-<audio controls src="/music/109..宝石Gem _ 陈泽 - 这世界我来过.mp3"></audio>
+<audio controls src="/music/109.mp3"></audio>
 
 ### 110.L（桃籽） - 喝酒不谈情遇人不动心
 
-<audio controls src="/music/110.L（桃籽） - 喝酒不谈情遇人不动心.mp3"></audio>
+<audio controls src="/music/110.mp3"></audio>
 
 ### 111.张德伊玲 - 挥霍
 
-<audio controls src="/music/111.张德伊玲 - 挥霍.mp3"></audio>
+<audio controls src="/music/111.mp3"></audio>
 
-### 112..姜姜 - 四海八荒
+### 112.姜姜 - 四海八荒
 
-<audio controls src="/music/112..姜姜 - 四海八荒.mp3"></audio>
+<audio controls src="/music/112.mp3"></audio>
 
-### 113..姜姜 - 莫道
+### 113.姜姜 - 莫道
 
-<audio controls src="/music/113..姜姜 - 莫道.mp3"></audio>
+<audio controls src="/music/113.mp3"></audio>
 
-### 114..小少焱 - 上下五千年
+### 114.小少焱 - 上下五千年
 
-<audio controls src="/music/114..小少焱 - 上下五千年.mp3"></audio>
+<audio controls src="/music/114.mp3"></audio>
 
-### 115..姜姜 - 落花雨（尘飞舞缓落旧纸扇）
+### 115.姜姜 - 落花雨（尘飞舞缓落旧纸扇）
 
-<audio controls src="/music/115..姜姜 - 落花雨（尘飞舞缓落旧纸扇）.mp3"></audio>
+<audio controls src="/music/115.mp3"></audio>
 
-### 116..闻人听書_ - 流光抛
+### 116.闻人听書_ - 流光抛
 
-<audio controls src="/music/116..闻人听書_ - 流光抛.mp3"></audio>
+<audio controls src="/music/116.mp3"></audio>
 
-### 117..闻人听書_ - 韶华渡
+### 117.闻人听書_ - 韶华渡
 
-<audio controls src="/music/117..闻人听書_ - 韶华渡.mp3"></audio>
+<audio controls src="/music/117.mp3"></audio>
 
-### 118..王莎莎 - 姐就是女王
+### 118.王莎莎 - 姐就是女王
 
-<audio controls src="/music/118..王莎莎 - 姐就是女王.mp3"></audio>
+<audio controls src="/music/118.mp3"></audio>
 
-### 119..祖海 - 好运来
+### 119.祖海 - 好运来
 
-<audio controls src="/music/119..祖海 - 好运来.mp3"></audio>
+<audio controls src="/music/119.mp3"></audio>
 
 ### 120.姜姜 - 千古风流
 
-<audio controls src="/music/120.姜姜 - 千古风流.mp3"></audio>
+<audio controls src="/music/120.mp3"></audio>
 
 ### 121.陈雪凝 - 忘记被忘记
 
-<audio controls src="/music/121.陈雪凝 - 忘记被忘记.mp3"></audio>
+<audio controls src="/music/121.mp3"></audio>
 
-### 122..闻人听書_ - 一念一生叹
+### 122.闻人听書_ - 一念一生叹
 
-<audio controls src="/music/122..闻人听書_ - 一念一生叹.mp3"></audio>
+<audio controls src="/music/122.mp3"></audio>
