--- a/_posts/2024-10-27-1.md
+++ b/_posts/2024-10-27-1.md
@@ -12,6 +12,14 @@ tags:
 
 ## 前言
 
+***$\color{red}\text{第一次访问会非常、非常慢！！}$***
+
+这是因为 Service Worker 正在进行缓存，因此会下载约 **$2GB$** 的数据。
+
+也考虑到浏览器性能问题，因此请**$\color{red}\text{耐心等待}$**。
+
+***
+
 本来是自用的，但你想下载当然也行。
 
 限制 $100MB$，部分压缩后会上传。
