--- a/_posts/2024-10-25-2.md
+++ b/_posts/2024-10-25-2.md
@@ -62,7 +62,7 @@ $$
 
 现在，针对第一种展开分析。（剩下三种分析见后文）
 
-设 $\large f_i=\sum\limits_{j=1}^i(x_j+y_j-k)$，则有 $\large f_m\leq x+y$。
+设 $\large f_i=\sum\limits_{j=1}^i(x_j+y_j-k)$，则有 $\large f_m\geq x+y$。
 
 设 $m=q_in+i$，其中 $i=m\bmod n$（或 $i=n$）。
 
